--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -1760,7 +1760,7 @@ perf的子命令, 尤其`stat`, 有很多可扩展的选项, 通过`perf stat -h
 
 除了以一定的**时间间隔**进行采样外，**CPU硬件计数器**触发的**采样！！！** 是**CPU性能分析**的另一种形式，可用于更加了解`cache misses`**高速缓存未命中**，`memory stall cycles`**内存停顿周期**和**其他低级处理器事件**。 
 
-可用的事件可以使用`perf list`找到：
+**可用的事件**可以使用`perf list`找到：
 
 ```
 # perf list | grep Hardware
@@ -1791,7 +1791,7 @@ perf的子命令, 尤其`stat`, 有很多可扩展的选项, 通过`perf stat -h
 # perf record -e L1-dcache-load-misses -c 10000 -ag -- sleep 5
 ```
 
-"`-c count`"机制是由处理器实现的, 当处理器达到这个阈值才中断内核.
+"`-c count`"机制是由**处理器实现的**, 当处理器达到这个阈值才中断内核.
 
 指定自定义计数器例子可以看前面的`Raw Counters`和下面的`skew`部分
 
