--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -78,7 +78,7 @@
       - [9.7.3.2. perf sched map:](#9732-perf-sched-map)
   - [9.8. eBPF](#98-ebpf)
     - [9.8.1. Prerequisites: 前提条件](#981-prerequisites-前提条件)
-    - [9.8.2. kmem_cache_alloc from Example](#982-kmem_cache_alloc-from-example)
+    - [9.8.2. kmem_cache_alloc from Example: 函数示例](#982-kmem_cache_alloc-from-example-函数示例)
     - [9.8.3. 事件限定符](#983-事件限定符)
   - [9.9. 性能事件的属性](#99-性能事件的属性)
     - [9.9.1. PMI中断和PEBS中断](#991-pmi中断和pebs中断)
@@ -2323,17 +2323,17 @@ perf sched -h
 
 从Linux 4.4开始，perf具有一些**增强的BPF支持**（又名`eBPF`或**简称**为“BPF”），在更高版本的内核中有更多支持。 BPF使perf跟踪成为程序化，并将perf从`counting tracer`(**计数**)和`sampling-with-post-processing tracer`(**带后处理的采样**)跟踪器转变为完全在内核中的`programmable tracer`**可编程跟踪器**。
 
-eBPF当前受到perf的限制，很难使用。 一直在变好。 通过bcc Python界面是访问eBPF的一种不同且当前更简单的方法，该界面在我的eBPF工具页面上进行了描述。 在此页面上，我将讨论性能。
+eBPF当前受到perf的限制，很难使用。 一直在变好。 通过bcc Python界面是访问eBPF的一种不同且当前更简单的方法，该界面在我的eBPF工具页面上进行了描述。在这里上，仅仅讨论性能。
 
 ### 9.8.1. Prerequisites: 前提条件
 
-至少Linux 4.4。 
+至少Linux 4.4内核.
 
 还有clang（例如，yum install clang）。
 
-### 9.8.2. kmem_cache_alloc from Example
+### 9.8.2. kmem_cache_alloc from Example: 函数示例
 
-该程序仅在其调用函数与在内核上下文中过滤的指定范围匹配时才跟踪内核`kmem_cache_alloc()`函数。 您可以想象这样做是为了提高效率：不必跟踪所有分配（这会非常频繁并且会增加大量开销），而是仅对一系列感兴趣的内核调用函数（例如内核模块）进行过滤。 我将松散地匹配tcp函数作为示例，这些函数在内存中的以下地址处：
+该程序用于跟踪内核`kmem_cache_alloc()`函数, 不过仅仅在**其调用函数**与在内核上下文中过滤的指定范围匹配时才。 您可以想象这样做是为了提高效率：**不必跟踪所有分配**（这会非常频繁并且会增加大量开销），而是仅对一系列感兴趣的内核调用函数（例如内核模块）进行过滤。 我将松散地匹配tcp函数作为示例，这些函数在内存中的以下地址处：
 
 ```
 # grep tcp /proc/kallsyms | more
