--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -2333,7 +2333,7 @@ eBPF当前受到perf的限制，很难使用。 一直在变好。 通过bcc Pyt
 
 ### 9.8.2. kmem_cache_alloc from Example: 函数示例
 
-该程序用于跟踪内核`kmem_cache_alloc()`函数, 不过仅仅在**其调用函数**与在内核上下文中过滤的指定范围匹配时才。 您可以想象这样做是为了提高效率：**不必跟踪所有分配**（这会非常频繁并且会增加大量开销），而是仅对一系列感兴趣的内核调用函数（例如内核模块）进行过滤。 我将松散地匹配tcp函数作为示例，这些函数在内存中的以下地址处：
+该程序用于跟踪内核`kmem_cache_alloc()`函数, 不过仅仅在**其调用函数**与**内核上下文中过滤信息指定的范围**匹配时。 您可以想象这样做是为了提高效率：**不必跟踪所有分配**（这会非常频繁并且会增加大量开销），而是仅对一系列感兴趣的内核调用函数（例如内核模块）进行过滤。 我将松散地匹配tcp函数作为示例，这些函数在内存中的以下地址处：
 
 ```
 # grep tcp /proc/kallsyms | more
@@ -2354,7 +2354,7 @@ ffffffff81864ae0 t tcp6_gso_segment
 ffffffff8187bd89 t tcp_v4_inbound_md5_hash
 ```
 
-我假设这些**函数是连续的**，因此通过跟踪范围`0xffffffff817c1bb0`到`0xffffffff8187bd89`，可以匹配很多tcp。
+我假设这些**函数是连续的**，因此通过**跟踪范围**`0xffffffff817c1bb0`到`0xffffffff8187bd89`，可以匹配很多tcp。
 
 这是我的BPF程序`kca_from.c`：
 
