--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -137,7 +137,7 @@
 
 Perf是一个基于内核的子系统，它提供一个**性能分析框架**，它以**性能事件**为基础，基于**对这些事件！！！采样！！！** 进行**性能统计**原理，可用于性能瓶颈的查找与热点代码的定位. 
 
-**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
+**采样的周期**以**事件的数量！！！来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
 
 ## 2.2. 功能概述
 
@@ -1758,6 +1758,8 @@ perf的子命令, 尤其`stat`, 有很多可扩展的选项, 通过`perf stat -h
 
 ## 9.3. Event Profiling: 事件分析
 
+
+
 除了以一定的**时间间隔**进行采样外，**CPU硬件计数器**触发的**采样！！！** 是**CPU性能分析**的另一种形式，可用于更加了解`cache misses`**高速缓存未命中**，`memory stall cycles`**内存停顿周期**和**其他低级处理器事件**。 
 
 **可用的事件**可以使用`perf list`找到：
@@ -2455,7 +2457,7 @@ perf的采样是**基于事件**进行的。**采样的周期**以**事件的数
 
 样本中包含的信息取决于用户和工具指定的**度量类型**，但是最重要的信息是**指令指针**（instruction pointer），也就是程序**被中断时所处的位置**。
 
-这种基于中断的采样，在现代处理器上存在刹车效应。也就是说，**样本中记录的指针**，和程序被中断以处理PMU事件时的指令指针，可能**相隔数十个指令**。
+这种基于中断的采样，在现代处理器上存在**刹车效应**。也就是说，**样本中记录的指针**，和程序被中断以处理PMU事件时的指令指针，可能**相隔数十个指令**。
 
 record子命令默认使用cycle事件，类似于定期采样。
 
