--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -139,6 +139,8 @@ Perf是一个基于内核的子系统，它提供一个**性能分析框架**，
 
 **采样的周期**以**事件的数量！！！来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
 
+注: 以一定时间间隔
+
 ## 2.2. 功能概述
 
 通过它, 应用程序可以利用 `PMU`, `tracepoint` 和内核中的**特殊计数器**来进行性能统计. 
@@ -1370,9 +1372,9 @@ perf_event_attr:
 
 注意: `{ sample_period, sample_freq }`
 
-通过`man perf_event_open(2)`查看这几个属性的描述. **默认情况**下, 这些**属性**表明内核**调整采样频率**, 从而**每秒**捕获 **4000** 个`context-switch`事件. 
+通过`man perf_event_open(2)`查看这几个属性的描述. **默认情况**下, 这些**属性**表明内核**调整采样频率！！！**, 从而**每秒**捕获 **4000** 个`context-switch`事件. 
 
-如果打算record中间经历的所有事件, 使用`-c 1`, 表明每发生一次`context-switches`便收集一次stack trace信息:
+如果打算record中间经历的所有事件, 使用`-c 1`, 表明**每发生一次**`context-switches`便**收集一次**stack trace信息:
 
 ```
 ./perf record -vv -e context-switches -c 1 /bin/true
@@ -2455,7 +2457,7 @@ https://blog.gmem.cc/perf
 
 perf的采样是**基于事件**进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
 
-样本中包含的信息取决于用户和工具指定的**度量类型**，但是最重要的信息是**指令指针**（instruction pointer），也就是程序**被中断时所处的位置**。
+样本中包含的信息取决于用户和工具指定的**度量类型**，但是最重要的信息是**指令指针**（IP, instruction pointer），也就是程序**被中断时所处的位置**。
 
 这种基于中断的采样，在现代处理器上存在**刹车效应**。也就是说，**样本中记录的指针**，和程序被中断以处理PMU事件时的指令指针，可能**相隔数十个指令**。
 
