--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -139,7 +139,7 @@ Perf是一个基于内核的子系统，它提供一个**性能分析框架**，
 
 **采样的周期**以**事件的数量！！！来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
 
-注: 以一定时间间隔
+注: 以一定时间间隔采样
 
 ## 2.2. 功能概述
 
@@ -1198,6 +1198,10 @@ Removed event: probe:tcp_sendmsg
   * 对于**用户态**程序, 使用了`uprobes`.
 * **定时间隔性能分析**(`Timed Profiling`): 使用`perf record -F Hz`, 能够以**任意频率**收集快照(**指令指针IP**或**堆栈跟踪Stack Trace**), 工作机制是**定期引发中断**. 这通常用于**CPU使用情况**分析(), 所以又称CPU Profiling. 具体见下面. 
 
+注: perf的采样是**基于事件**进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
+
+
+
 ## 8.2. perf list查看所有性能事件
 
 **不同型号的CPU**支持的**硬件性能事件**不尽相同。**不同版本的内核**提供的**软件性能事件**与 **Tracepoint events** 也不尽相同。
@@ -1266,7 +1270,7 @@ List of pre-defined events (to be used in -e):
 
 ## 8.3. Hardware Events(PMCs): 硬件性能事件(PMCs)
 
-由**PMU部件产生**，在特定的条件下探测性能事件**是否发生**以及发生的**次数**。比如**cache命中**。
+由**PMU部件产生**，在**特定的条件**下探测性能事件**是否发生**以及发生的**次数**。比如**cache命中**。
 
 来自CPU自己或CPU的PMU（`Performance Monitoring Unit`，性能监控单元）硬件计数，包含一系列**微架构事件**例如时钟周期、L1缓存丢失等。具体支持的事件类型取决于CPU型号.
 
@@ -1343,7 +1347,7 @@ List of pre-defined events (to be used in -e):
 
 ### 8.4.1. 采样周期
 
-**软件事件**有**默认的周期**. 这意味着当对软件事件采样时, 采样的是事件的**一部分子集**, 而**不是中间经历的每一次事件**. 通过`perf record -vv`可以查看
+**软件事件！！！** 有**默认的周期！！**. 这意味着当对软件事件采样时, 采样的是事件的**一部分子集**, 而**不是中间经历的每一次事件**. 通过`perf record -vv`可以查看
 
 ```
 ./perf record -vv -e context-switches /bin/true
