--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -1270,9 +1270,9 @@ List of pre-defined events (to be used in -e):
 
 ## 8.3. Hardware Events(PMCs): 硬件性能事件(PMCs)
 
-由**PMU部件产生**，在**特定的条件**下探测性能事件**是否发生**以及发生的**次数**。比如**cache命中**。
+由处理器的**PMU部件产生**，在**特定的条件**下探测性能事件**是否发生**以及发生的**次数**。比如**cache命中**。
 
-来自CPU自己或CPU的PMU（`Performance Monitoring Unit`，性能监控单元）硬件计数，包含一系列**微架构事件**例如时钟周期、L1缓存丢失等。具体支持的事件类型取决于CPU型号.
+来自CPU自己或CPU的PMU（`Performance Monitoring Unit`，性能监控单元）硬件计数，包含一系列**微架构事件**例如时钟周期、L1缓存丢失等。具体支持的**事件类型取决于CPU型号**.
 
 完整的性能事件列表见Intel手册`Performance Monitoring Events`
 
@@ -2470,7 +2470,7 @@ record子命令默认使用cycle事件，类似于定期采样。
 
 **硬件性能事件**由处理器的PMU提供支持。
 
-如前文所述，perf会对PMI中断发生时的PC寄存器进行采样。由于现代处理器的主频非常高，在加上深度流水线机制，从**性能事件被触发**，到处理器**响应PMI中断**，流水线上可能已处理过百条指令。那么**PMI中断**采到的**指令地址**就不再是处罚性能事件的那条指令的地址了，而可能具有**非常严重的偏差**。
+如前文所述，perf会对PMI中断发生时的PC寄存器进行采样。由于现代处理器的主频非常高，在加上深度流水线机制，从**性能事件被触发**，到处理器**响应PMI中断**，流水线上可能已处理过百条指令。那么**PMI中断**采到的**指令地址**就不再是触发性能事件的那条指令的地址了，而可能具有**非常严重的偏差**。
 
 为了解决这个问题，intel处理器通过**PEBS**（Precise Event Based Sampling）机制实现了**高精度事件采样**。PEBS通过硬件在**计数器溢出**时将处理器现场直接保存到内存（而**不是在相应中断时**才保存寄存器现场），从而使得perf能够真正触发性能事件的那条指令的地址，提高了采样精度。
 
