--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -1793,7 +1793,7 @@ perf的子命令, 尤其`stat`, 有很多可扩展的选项, 通过`perf stat -h
 
 所以通常**只需检测一小部分事件**，而不是全部事件, 这样就已经够用。可以通过使用“`-c`”和**一个计数指定触发事件**收集的**阈值**来达到这个目的.
 
-比如, 下面的命令用来检测`level 1 data load misses`, 每发生10000次收集一次stack trace
+比如, 下面的命令用来检测`level 1 data load misses`, **每发生10000次收集一次stack trace**
 
 ```
 # perf record -e L1-dcache-load-misses -c 10000 -ag -- sleep 5
