--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -55,7 +55,7 @@
   - [9.2. Timed Profiling(CPU Profiling): 定时间隔性能分析](#92-timed-profilingcpu-profiling-定时间隔性能分析)
     - [9.2.1. sampling: 采样](#921-sampling-采样)
     - [9.2.2. 分析](#922-分析)
-  - [9.3. Event Profiling: 事件分析](#93-event-profiling-事件分析)
+  - [9.3. Event Profiling: 事件剖析](#93-event-profiling-事件剖析)
     - [9.3.1. Skew和PEBS: 指令偏移和PEBS基于采样的精确事件](#931-skew和pebs-指令偏移和pebs基于采样的精确事件)
   - [9.4. Static Kernel Tracing: 内核态静态追踪](#94-static-kernel-tracing-内核态静态追踪)
     - [9.4.1. Counting Syscalls: 系统调用计数](#941-counting-syscalls-系统调用计数)
@@ -1762,9 +1762,11 @@ perf的子命令, 尤其`stat`, 有很多可扩展的选项, 通过`perf stat -h
 
 `perf report`的输出可能很长, 从而难以阅读, 可以试着生成火焰图. 详细见后面.
 
-## 9.3. Event Profiling: 事件分析
+## 9.3. Event Profiling: 事件剖析
 
-除了以一定的**时间间隔**进行采样外，**CPU硬件计数器！！！** 触发的**采样**是**CPU性能分析**的另一种形式，可用于更加了解`cache misses`**高速缓存未命中**，`memory stall cycles`**内存停顿周期**和**其他低级处理器事件**。 
+除了以一定的**时间间隔**进行采样外，**CPU硬件计数器！！！** 触发的**采样**是**CPU性能分析！！！** 的另一种形式，可用于更加了解`cache misses`**高速缓存未命中**，`memory stall cycles`**内存停顿周期**和**其他低级处理器事件**。 
+
+注: 也就是当**目标事件计数溢出指定的数值！！！**，产生中断, 进行**采样**。
 
 **可用的事件**可以使用`perf list`找到：
 
