--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -1021,6 +1021,10 @@ perf工具可以分为**三种方式**：
 2. 再是**采样模式**, 使用`perf record`命令，需要对开销稍加注意，因为捕获文件会迅速变为数百兆字节。 这取决于**跟踪的事件的速率**：频率越高，开销越高，`perf.data`数据大小也越大。
 3. 要真正**减少开销**并生成更多**高级摘要**，需要编写由perf执行的**BPF程序**。 请参阅下面`eBPF`部分。
 
+> record子命令默认使用cycle事件，**类似于定期采样**。
+
+> 采样都是有周期的
+
 ## 7.7. 使用示例
 
 选择这些例子是为了说明perf的**不同使用方式**, 从收集到报告, 详细的看下面的示例.
@@ -1088,6 +1092,8 @@ Couldn't synthesize cgroup events.
 
 # perf report
 ```
+
+注: 软件事件都是有采样周期的, 下面有说到.
 
 4. **跟踪**(`trace`)5秒的**所有调度程序进程事件**，并且**dump详细信息**：
 
