--- a/Linux/Debug/perf/4. perf record.md
+++ b/Linux/Debug/perf/4. perf record.md
@@ -30,14 +30,14 @@ record, report, annotate是一组相关的命名，通常的使用流程是：
 1. 在被剖析机器上调用record录制数据
 2. 拷贝录制的perf.data，在任意机器上调用report、annotate进行分析
 
-该命令**不是记录所有事件**，还是**进行采样**。默认情况下采样基于**cycle事件**，也就是进行定期采样。
+该命令**不是记录所有事件**，而是**进行采样**。默认情况下采样基于**cycle事件**，也就是**进行定期采样！！！**。
 
-perf接口允许通过两种方式描述采样周期：
+perf接口允许通过两种方式描述**采样周期**：
 
-1. period：事件发生的次数
-2. frequency：每秒采集样本的平均个数
+1. period：**事件发生的次数**
+2. frequency：**每秒**采集样本的**平均个数**
 
-第一种对应`-c`参数, 该机制是由处理器实现的, 当处理器达到这个阈值才中断内核.
+第一种对应`-c`参数, 该机制是由处理器实现的, 当**处理器达到这个阈值**才**中断内核**.
 
 perf默认使用第二种，具体来说对应到`-F`选项。`-F 1000`表示1000Hz，也就是**每秒平均采样1000个**。内核会动态的调整采样周期，以尽量满足需求。
 
