--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -135,15 +135,13 @@
 
 ## 2.1. 基本原理
 
-Perf是一个基于内核的子系统，它提供一个**性能分析框架**，它以**性能事件**为基础，基于**对这些事件！！！采样！！！** 进行**性能统计**原理，可用于性能瓶颈的查找与热点代码的定位. 
+Perf是一个基于内核的子系统，它提供一个**性能分析框架**，它以**性能事件**为基础.
 
-**采样的周期**以**事件的数量！！！来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
-
-注: 以一定时间间隔采样
+基于**对这些事件！！！采样！！！** 进行**性能统计**原理，可用于性能瓶颈的查找与热点代码的定位. **采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
 
 ## 2.2. 功能概述
 
-通过它, 应用程序可以利用 `PMU`, `tracepoint` 和内核中的**特殊计数器**来进行性能统计. 
+通过它, 应用程序可以利用 `PMU`, `tracepoint` 和内核中的**特殊计数器**来进行**性能统计计数**. 
 
 它不但可以分析指定**应用程序**的性能问题（`per thread`），也可以用来分析**内核**的性能问题, 当然也可以**同时**分析**应用代码**和**内核**，从而全面理解应用程序中的性能瓶颈.
 
@@ -1009,21 +1007,27 @@ record子命令默认使用cycle事件，**类似于定期采样**。
 
 ## 7.6. 3种使用方式和性能分析的3个过程
 
+perf的所有功能都是基于**性能事件**的.
+
 perf工具可以分为**三种方式**：
 
-* `counting`(**计数**): 在**内核上下文**中对**事件**进行**计数**，其中perf打印计数摘要。 此模式**不会生成perf.data文件**。`counting tracer`**计数追踪器**.
-* `sampling`(**采样**): 采样事件，将**事件数据**写入**内核缓冲区**，perf命令以柔和的异步速率读取事件数据，以写入`perf.data`文件。 然后，`perf report`或`perf script`命令将**读取此文件**。`sampling-with-post-processing tracer`采样然后处理追踪器.
-* `bpf`(**动态插入自定义程序**): 事件的**bpf程序**，这是Linux 4.4+内核中的一项新功能，可以在**内核空间**中执行**自定义的用户定义程序**，从而可以执行高效的**数据过滤**和**汇总**。 例如，有效测量的时间延迟直方图。`programmable tracer`可编程追踪器.
+* `counting`(**计数**): 在**内核上下文**中对**事件**进行**计数**，其中perf打印计数摘要。 此模式**不会生成perf.data文件**。`counting tracer`**计数追踪器**. 
+
+>对事件进行计数统计.
+
+* `sampling`(**采样**): 采样事件，将**事件数据**写入**内核缓冲区**，perf命令以柔和的异步速率读取事件数据，以写入`perf.data`文件。 然后，`perf report`或`perf script`命令将**读取此文件**。`sampling-with-post-processing tracer`采样然后处理追踪器. record默认是基于**cycle事件**进行采样.
+
+> 注: perf的采样是**基于事件**进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
+> record子命令默认使用cycle事件，**类似于定期采样**。
+> 采样周期分为两种: period(发生次数)和frequency(每秒的个数), 具体见record节.
+
+* `bpf`(**动态插入自定义程序**): **事件**的**bpf程序**，这是Linux 4.4+内核中的一项新功能，可以在**内核空间**中执行**自定义的用户定义程序**，从而可以执行高效的**数据过滤**和**汇总**。 例如，有效测量的时间延迟直方图。`programmable tracer`可编程追踪器.
 
 而这也对应了性能分析的三个过程: 
 
 1. 先尝试从**事件计数**开始, 使用`perf stat`命令，看是否足够。该子命令**开销最少**。
 2. 再是**采样模式**, 使用`perf record`命令，需要对开销稍加注意，因为捕获文件会迅速变为数百兆字节。 这取决于**跟踪的事件的速率**：频率越高，开销越高，`perf.data`数据大小也越大。
 3. 要真正**减少开销**并生成更多**高级摘要**，需要编写由perf执行的**BPF程序**。 请参阅下面`eBPF`部分。
-
-> record子命令默认使用cycle事件，**类似于定期采样**。
-
-> 采样都是有周期的
 
 ## 7.7. 使用示例
 
@@ -1181,7 +1185,9 @@ Removed event: probe:tcp_sendmsg
 
 # 8. Perf 性能事件
 
-利用perf剖析程序性能时，需要指定**当前测试**的**性能事件**。
+前面也说到了, perf的功能是**基于事件**进行的。
+
+利用perf剖析程序性能时，**需要指定当前测试的性能事件！！！**。
 
 性能事件在不同系统中是不同的。如果一些事件会对程序的执行时间造成较大的负面影响, 在优化代码时，应尽可能减少此类事件发生。
 
@@ -1197,18 +1203,14 @@ Removed event: probe:tcp_sendmsg
 
 分为六种类型的事件:
 
-* **硬件事件**(`Hardware Events`): CPU性能监控计数(CPU performance monitoring counters)**硬件计数器**. 计数.
-* **软件事件**(`Software Events`): 这些是基于**内核计数器**的低级事件. 比如, CPU迁移、次要故障和主要故障等等. 计数.
+* **硬件事件**(`Hardware Events`): CPU性能监控计数(CPU performance monitoring counters)**硬件计数器**. 硬件计数.
+* **软件事件**(`Software Events`): 这些是基于**内核计数器**的低级事件. 比如, CPU迁移、次要故障和主要故障等等. 软件计数.
 * **内核态tracepoint事件**(`Kernel Tracepoint Events`): 这些是内核中的**静态检测点**, 是在内核合适位置**硬编码**进去的. 硬编码.
 * **用户静态定义追踪**(`User Statically-Defined Tracing`, USDT): 这些是用户态程序中的静态tracepoint. 硬编码.
-* **动态追踪**(`Dynamic Tracing`): 可以在软件的**任何位置**创建事件, 从而可以被动态检测. **动态编码**.
+* **动态追踪**(`Dynamic Tracing`): 可以在软件的**任何位置**创建**事件**, 从而可以被动态检测. **动态编码**.
   * 对于**内核态**来说, 利用了`kprobes`框架;
   * 对于**用户态**程序, 使用了`uprobes`.
-* **定时间隔性能分析**(`Timed Profiling`): 使用`perf record -F Hz`, 能够以**任意频率**收集快照(**指令指针IP**或**堆栈跟踪Stack Trace**), 工作机制是**定期引发中断**. 这通常用于**CPU使用情况**分析(), 所以又称CPU Profiling. 具体见下面. 
-
-注: perf的采样是**基于事件**进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
-
-
+* **定时间隔性能分析**(`Timed Profiling`): 使用`perf record -F Hz`, 能够以**任意频率**收集快照(**指令指针IP**或**堆栈跟踪Stack Trace**), 工作机制是**定期引发中断**. 这通常用于**CPU使用情况**分析(), 所以又称**CPU Profiling**. 具体见下面. 
 
 ## 8.2. perf list查看所有性能事件
 
