--- a/Linux/Debug/perf/4. perf record.md
+++ b/Linux/Debug/perf/4. perf record.md
@@ -19,7 +19,9 @@
 
 记录**一段时间**内系统/进程的性能数据
 
-执行一个**指定应用程序**并且记录性能数据到perf.data文件, 该文件可以使用`perf report`进行解析.
+执行一个**指定应用程序**并且记录性能数据(采样)到perf.data文件, 该文件可以使用`perf report`进行解析.
+
+**采样的周期**以**事件的数量！！！来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
 
 此命令可以启动一个命令，并对其进行剖析，然后把剖析数据记录到文件（默认perf.data）。按`Ctrl - C`可以随时结束剖析。
 
@@ -34,12 +36,12 @@ record, report, annotate是一组相关的命名，通常的使用流程是：
 
 perf接口允许通过两种方式描述**采样周期**：
 
-1. period：**事件发生的次数**
+1. period：指定的**事件发生的次数**
 2. frequency：**每秒**采集样本的**平均个数**
 
 第一种对应`-c`参数, 该机制是由处理器实现的, 当**处理器达到这个阈值**才**中断内核**.
 
-perf默认使用第二种，具体来说对应到`-F`选项。`-F 1000`表示1000Hz，也就是**每秒平均采样1000个**。内核会动态的调整采样周期，以尽量满足需求。
+perf默认使用第二种，具体来说对应到`-F`选项。`-F 1000`表示1000Hz，也就是**每秒平均采样1000个**。内核会**动态的调整采样周期**，以**尽量满足需求**。
 
 # 2. 使用方法
 
