--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -1357,7 +1357,9 @@ List of pre-defined events (to be used in -e):
 
 ### 8.4.1. 采样周期
 
-**软件事件！！！** 有**默认的周期！！**. 这意味着当对软件事件采样时, 采样的是事件的**一部分子集**, 而**不是中间经历的每一次事件**. 通过`perf record -vv`可以查看
+**软件事件！！！** 有**默认的周期！！**. 
+
+这意味着当对软件事件采样时, 采样的是事件的**一部分子集**, 而**不是中间经历的每一次事件**. 通过`perf record -vv`可以查看
 
 ```
 ./perf record -vv -e context-switches /bin/true
