--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/14. posted-interrupt处理.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/14. posted-interrupt处理.md
@@ -14,22 +14,11 @@
 
 # 1. 基本原理
 
-
-
-通过设置“进程发布中断” VM执行控件来启用发布中断处理。 响应于具有中断后通知向量的中断的到达而执行处理。 响应于这样的中断，处理器处理记录在称为张贴中断描述符的数据结构中的虚拟中断。 中断后通知向量和中断后描述符的地址是VMCS中的字段； 参见第24.6.8节。
-如果“进程发布的中断” VM执行控制为1，则逻辑处理器将使用位于发布的中断描述符地址的64字节的发布的中断描述符。 发布的中断描述符具有以下格式：
-
-
-
+`posted-interrupt`(直译为"通告中断")是指**VMM**张贴出来给guest进行处理的**虚拟中断**.
 
 posted-interrupt processing(通告中断处理)在较早处理器并不支持. VMM通过**检查**`Pin-based VM-execution control`字段的"`process posted interrupts`"位(bit 7)**是否允许设为1**来检查处理器**是否支持**(见2.5.6.1).
 
-
-
-
-`posted-interrupt`(直译为"通告中断")是指**VMM**张贴出来给guest进行处理的**虚拟中断**.
-
-**guest**收到一个**中断通知**(**向量号**为`posted-interrupt notification vector`的**外部中断！！！**)后, 将张贴的**通告中断请求列表！！！** 复制到**virtual\-APIC page！！！**页面的**VIRR**里, 从而**更新虚拟中断请求列表**, 然后进行**虚拟中断的评估与delivery**.
+**guest**收到一个**中断通知**(**向量号**为`posted-interrupt notification vector`的**外部中断！！！**)后, 将张贴的**通告中断请求列表！！！** 复制到`virtual-APIC page`页面的**VIRR**里, 从而**更新虚拟中断请求列表**, 然后进行**虚拟中断的评估与delivery**.
 
 # 2. 启用posted-interrupt处理机制
 
