--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/3. 处理任务切换.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/3. 处理任务切换.md
@@ -21,7 +21,7 @@ VMM 整个模拟任务切换的过程大致可以分为三个阶段
 
 其中，在第 2 阶段的任务切换处理非常烦琐。而在第 3 阶段里，VMM 需要根据情况反射一个异常给 guest 处理，或者跳转去执行 guest 的新任务。第 1 阶段的工作由处理器自动完成，主要是检查是否允许进行任务切换。7.1.3.1 检查任务切换条件
 
-进行 TS 任务切换是一个非常复杂的过程，在 Iong-mode (A-32c）模式下处理器不支持 TSS 的任务切换机制。在由于任务切换而导致 Vm-exit 之前，处理器进行一系列的检查，确认满足任务切换的条件。如果检查不通过则引发异常，如果检查通过则产生  Vm-exit.
+进行 TSS 任务切换是一个非常复杂的过程，在 Iong-mode (A-32c）模式下处理器不支持 TSS 的任务切换机制。在由于任务切换而导致 Vm-exit 之前，处理器进行一系列的检查，确认满足任务切换的条件。如果检查不通过则引发异常，如果检查通过则产生  Vm-exit.
 
 1. 使用 TSS selector 进行任务切换
 
