--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/3. 处理任务切换.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/3. 处理任务切换.md
@@ -23,16 +23,70 @@ VMM 整个模拟任务切换的过程大致可以分为三个阶段
 
 进行 TSS 任务切换是一个非常复杂的过程，在 Iong-mode (A-32c）模式下处理器不支持 TSS 的任务切换机制。在由于任务切换而导致 Vm-exit 之前，处理器进行一系列的检查，确认满足任务切换的条件。如果检查不通过则引发异常，如果检查通过则产生  Vm-exit.
 
-1. 使用 TSS selector 进行任务切换
+# 使用 TSS selector 进行任务切换
 
 CALL 或 JMP 指令使用 TSS selector 作为 far pointer 进行任务切换时，处理器进行下面的检查。
 
- (1) 检查 selector 是否为 NULL selector。属于 NULL selector 时产生#GP 异常。
+(1) 检查 selector 是否为 NULL selector。属于 NULL selector 时产生#GP 异常。
 
- (2) 检查 selector 是否超过描述符表的 limit。超过 limit 则产生#GP 异常。
+(2) 检查 selector 是否超过描述符表的 limit。超过 limit 则产生#GP 异常。
 
- (3) 读取描述符进行类型检查：
+(3) 读取描述符进行类型检查：
 
-属于 TSS 描述符，在 1A-32e 模式下则产生#GP 异常
+* 属于 TSS 描述符，在 1A-32e 模式下则产生 #GP 异常
 
-属于其他不支持的类型（非代码段描述符、TSS 描述符以及 Task-gate 描述符），则产生#GP 异常。
+* 属于其他不支持的类型（非代码段描述符、TSS 描述符以及 Task-gate 描述符），则产生#GP 异常。
+
+(4) 检査访问权限。假如 TSS 描述符的 DPL 小于 CPL 或者 RPL，则产生 GP 异常。
+
+(5) 检查 TSS selector 的 T 位（bit2)。TI=1 时产生 GP 异常。
+
+(6) 检査 TSS 描述符是否为 busy。属于 busy 则产生#GP 异常。
+
+(7) 检查 TSS 描述符是否为 present。属于 not-present 则产生#NP 异常。
+
+# 使用 Task-gate 进行任务切换
+
+CALL 或 JMP 指令使用 Task- gate selector 作为 far pointer 尝试任务切换。中断、异常或注入事件 delivery 期间引用 IDT 的 ask-gate 描述符时，处理器进行下面的检查。
+
+(1) CALL 或 JMP 指令检查 Task- gate selector
+
+* 检查 Task gate selector 是否为 NULL selector。属于 NULL selector 时产生 GP 异
+
+* 检查 Task- gate selector 是否超过描述符表的 limit。超过 limit I 时产生 GP 异常。
+
+(2) 中断、异常或者注入事件 deliver I 时检查向量号。
+
+检查向量号是否超过 IDT limit。超过 IDT limit 时产生#GP 异常。
+
+ (3) 根据 Task- gate selector 读取 Task-gate 描述符检查
+
+在 IA-32e 模式下产生#GP 异常。
+
+ (4) 检访问权限，产生或者注入的 NMI、外部中断、硬件异常不需要检查权限。
+
+产生或者注入软件中断或软件异常（INT、INT3 及 INTO): Task-gate 描述符的 DPL 小于 CPL 时，产生 P 异常。
+
+由 CALL 或 JMP 指令发起：Task-gate 描述符的 DPL 小于 CPL 或者 RPL 时，产生 #GP 异常。
+
+ (5) 检查 Task-gate 描述符是否为 present。属于 not-present 则产生排 NP 异常。
+
+ (6) 从 Task-gate 描述符里读取 TSS selector，检查 TSS selector
+
+ TSS selector I 的 TI 位（bit2) 为 1 时，产生 GP 异常。
+
+ TSS selector 超过 GDT limit 时，产生 GP 异常
+
+ (7) 根据 rss selector 读取 TSS 描述符检查。
+
+TSS描述符属于 busy时，产生#GP 异常。
+
+・TSS 描述符属于 not present 时，产生NP 异常。
+
+3. 使用 IRET 进行任务切换
+
+当执行 IRET 指令，EFLAGS. NT=1 时，处理器进行下面的检查。
+
+ (1) 在 1A-32e 模式下，则产生#GP 异常。
+
+ (2) 从当前 TSS 块内的 Task-link 读取 TSS selector 检查
