--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/3. 处理任务切换.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/3. 处理任务切换.md
@@ -57,31 +57,31 @@ CALL 或 JMP 指令使用 Task- gate selector 作为 far pointer 尝试任务切
 
 (2) 中断、异常或者注入事件 deliver I 时检查向量号。
 
-检查向量号是否超过 IDT limit。超过 IDT limit 时产生#GP 异常。
+* 检查向量号是否超过 IDT limit。超过 IDT limit 时产生#GP 异常。
 
- (3) 根据 Task- gate selector 读取 Task-gate 描述符检查
+(3) 根据 Task-gate selector 读取 Task-gate 描述符检查
 
-在 IA-32e 模式下产生#GP 异常。
+* 在 IA-32e 模式下产生 `#GP` 异常。
 
- (4) 检访问权限，产生或者注入的 NMI、外部中断、硬件异常不需要检查权限。
+(4) 检访问权限，产生或者注入的 NMI、外部中断、硬件异常不需要检查权限。
 
-产生或者注入软件中断或软件异常（INT、INT3 及 INTO): Task-gate 描述符的 DPL 小于 CPL 时，产生 P 异常。
+* 产生或者注入软件中断或软件异常（INT、INT3 及 INTO): Task-gate 描述符的 DPL 小于 CPL 时，产生 P 异常。
 
-由 CALL 或 JMP 指令发起：Task-gate 描述符的 DPL 小于 CPL 或者 RPL 时，产生 #GP 异常。
+* 由 CALL 或 JMP 指令发起：Task-gate 描述符的 DPL 小于 CPL 或者 RPL 时，产生 #GP 异常。
 
- (5) 检查 Task-gate 描述符是否为 present。属于 not-present 则产生排 NP 异常。
+(5) 检查 Task-gate 描述符是否为 present。属于 not-present 则产生排 NP 异常。
 
- (6) 从 Task-gate 描述符里读取 TSS selector，检查 TSS selector
+(6) 从 Task-gate 描述符里读取 TSS selector，检查 TSS selector
 
- TSS selector I 的 TI 位（bit2) 为 1 时，产生 GP 异常。
+* TSS selector I 的 TI 位（bit2) 为 1 时，产生 GP 异常。
 
- TSS selector 超过 GDT limit 时，产生 GP 异常
+* TSS selector 超过 GDT limit 时，产生 GP 异常
 
- (7) 根据 rss selector 读取 TSS 描述符检查。
+(7) 根据 rss selector 读取 TSS 描述符检查。
 
-TSS描述符属于 busy时，产生#GP 异常。
+* TSS描述符属于 busy时，产生 #GP 异常。
 
-・TSS 描述符属于 not present 时，产生NP 异常。
+* TSS 描述符属于 not present 时，产生 #NP 异常。
 
 3. 使用 IRET 进行任务切换
 
