--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/3. 处理任务切换.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/3. 处理任务切换.md
@@ -83,10 +83,10 @@ CALL 或 JMP 指令使用 Task- gate selector 作为 far pointer 尝试任务切
 
 * TSS 描述符属于 not present 时，产生 #NP 异常。
 
-3. 使用 IRET 进行任务切换
+# 使用 IRET 进行任务切换
 
-当执行 IRET 指令，EFLAGS. NT=1 时，处理器进行下面的检查。
+当执行 IRET 指令，EFLAGS.NT=1 时，处理器进行下面的检查。
 
- (1) 在 1A-32e 模式下，则产生#GP 异常。
+(1) 在 1A-32e 模式下，则产生#GP 异常。
 
- (2) 从当前 TSS 块内的 Task-link 读取 TSS selector 检查
+(2) 从当前 TSS 块内的 Task-link 读取 TSS selector 检查
