--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/3. 处理任务切换.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/3. 处理任务切换.md
@@ -87,6 +87,20 @@ CALL 或 JMP 指令使用 Task- gate selector 作为 far pointer 尝试任务切
 
 当执行 IRET 指令，EFLAGS.NT=1 时，处理器进行下面的检查。
 
-(1) 在 1A-32e 模式下，则产生#GP 异常。
+(1) 在 1A-32e 模式下，则产生 #GP 异常。
 
-(2) 从当前 TSS 块内的 Task-link 读取 TSS selector 检查
+(2) 从当前 TSS 块内的 Task-link 读取 TSS selector 检查 TSS selector 的 T 位（bit2) 为 1 时，产生#GP 异常  TSS selector 超过 GDT limit 时，产生#GP 异常。
+
+(3) 根据 TSS selector 读取 TSS 描述符检查。
+
+如果不是 TSS 描述符，产生#TS 异常。TSS 描述符不属于 busy 时，产生#S 异常。
+
+(4) TSS 描述符属于 not- present 时，产生 NP 异常。
+
+在对上面三个途径下的任务切换进行相应的检查后，处理器确认允许执行任务切换的条件满足。但是如前面所述，VMX non- root operation 下不允许进行任务切换。因此接着会产生 VM-exit
+
+7.1.3.2 VMM 处理任务切换
+
+ guest 在尝试任务切换时，经过前面的满足条件检查后产生 VM-exit。VMM 拦截了  guest 任务切换动作，但是 VMM 必须支持 guest Os 进行任务切换。因此，在这个阶段里 VMM 的任务是帮助 guest 完成任务切换操作。
+
+不能通过事件注入方式反射事件给 guest处理，VMM应该模拟处理器的任务切换动作。在 MIBVMXIVMXVMM.asm 文件里实现了 Dotask Switch 函数处理 guest 的任务切换。
