--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/3. 处理任务切换.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/3. 处理任务切换.md
@@ -93,7 +93,9 @@ CALL 或 JMP 指令使用 Task- gate selector 作为 far pointer 尝试任务切
 
 (3) 根据 TSS selector 读取 TSS 描述符检查。
 
-如果不是 TSS 描述符，产生#TS 异常。TSS 描述符不属于 busy 时，产生#S 异常。
+* 如果不是 TSS 描述符，产生#TS 异常。
+
+* TSS 描述符不属于 busy 时，产生#S 异常。
 
 (4) TSS 描述符属于 not- present 时，产生 NP 异常。
 
