--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/3. 处理任务切换.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/3. 处理任务切换.md
@@ -9,7 +9,7 @@
 
 * 在一个**向量事件**（中断或异常）**delivery 期间**尝试**任务切换**，即向量号在 **guest IDT** 对应的**描述符**是 `task-gate` 描述符。
 
-由于 **VMX 不支持 guest 进行任务切换**（利用 **TSS** 机制），因此在 guest 由于尝试进行任务切换而产生 VM-exit 时，VMM 需要模拟 guest 的任务切换来代替处理器的操作（guest 运行在 legacy 模式下）。
+由于 **VMX 不支持 guest 进行任务切换**（利用 **TSS** 机制），因此在 guest 由于尝试进行任务切换而产生 VM-exit 时，VMM 需要**模拟 guest 的任务切换**来代替处理器的操作（guest 运行在 **legacy 模式**下）。
 
 VMM 整个模拟任务切换的过程大致可以分为三个阶段
 
