--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
@@ -1,4 +1,22 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 拦截外部中断](#1-拦截外部中断)
+  - [1.1. 设置拦截外部中断](#11-设置拦截外部中断)
+  - [1.2. VMM两种处理](#12-vmm两种处理)
+    - [1.2.1. host-IDT delivery](#121-host-idt-delivery)
+    - [1.2.2. Guest-IDT delivery](#122-guest-idt-delivery)
+- [2. 转发外部中断](#2-转发外部中断)
+- [3. 监控guest设置8259](#3-监控guest设置8259)
+  - [3.1. 处理8259初始化流程](#31-处理8259初始化流程)
+- [4. 示例](#4-示例)
+  - [4.1. guest端代码](#41-guest端代码)
+  - [4.2. 监控访问8259A 端口](#42-监控访问8259a-端口)
+  - [4.3. 编译及运行](#43-编译及运行)
+
+<!-- /code_chunk_output -->
 
 
 对于外部中断，处理器可以接收从**中断控制器**（**8259**、**I0APIC** 或者 **local APIC**）来的中断请求，也可以接收来自**处理器间**以 **Fixed delivery** 模式发送的 **IPI** 消息。
