--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
@@ -141,29 +141,26 @@ keyboard_8259_handler.SendExtIntIpi:
 
 按照 8259 的初始化工作原理，它的初始化流程大致为下面的伪码所示。
 
+```cpp
+init_8259()
+{
+    ......
+    if(write_ICW1(0x11)) {
+     /* 
+      * 向 20h 端口写入 1h 值，被认为是写 IC1 字
+      * 假如写入了 Cw1 字，则认定处于 8259 的初始化流程里
+      */
+        write_ICW2(vector); //后续写入 ICW2
+        write_ICW3(...);    //写入 ICW3
+        write_ICW4(...);    //写人 ICW4
+    }
+    ......
+}
 ```
-init_8259
 
- if  (write_ICW1 (0x11))
+当向 20h 端口写人的值为 11h 时，则认为写入 ICW1 字，那么 guest 正处于 8259 的初始化当中。8259 期望后续向 21h 端口分别写入 ICW2、ICW3 及 ICW4 字(这几个初始化字使用同一个端口).
 
-向 20h 端口写入 1h 值，被认为是写 IC1 字
-
-假如写入了 Cw1 字，则认定处于 8259 的初始化流程里
-
- rite_Icw2 (vector）：后续写入 Iw2
-
- rite_Icw3 (.): //写 w3
-
- write_Icw4 (.) 写人 Iw4
-```
-
-当向 2h 端口写人的值为 h 时，则认为写入 ICW 字，那么 guest 正处于 8259 的
-
-初始化当中。8259 期望后续向 21h 端口分别写入 ICW2、ICW3 及 CW4 字（这几个初始化字使用同一个端口）
-
-VMM 必须根据这个原理来监控 guest 初始化 8259。下面的伪代码是当 guest 尝试执
-
-行 O 指令被拦截后，VMM 做出的粗略处理
+VMM 必须根据这个原理来监控 guest 初始化 8259。下面的伪代码是当 guest 尝试执行 I/O 指令被拦截后，VMM 做出的粗略处理
 
 
 
