--- a/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/5. 最大的物理地址和线性地址.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/5. 最大的物理地址和线性地址.md
@@ -8,4 +8,19 @@
 
 在Intel中广泛使用**MAXPHYADDR**这个术语来表示**最大的物理地址**。80000008H leaf返回的EAX[7：0]被称为MAXPHYADDR。
 
-当处理器**不支持80000008H leaf（功能**）时，如果检测到**CPUID.01H：EDX[6]=1（即：PAE=1**）则支持**最高36位物理地址**。如果此时PAE也并不支持，那么**MAXPHYADDR就是32位**。
+当处理器**不支持80000008H leaf（功能**）时，如果检测
+`CPUID.01H:EDX[6] = 1`（即：**PAE=1**）则支持**最高36位物理地址**。如果此时PAE也并不支持，那么**MAXPHYADDR就是32位**。
+
+
+```
+# cpuid -l 0x80000008H -1
+Disclaimer: cpuid may not support decoding of all cpuid registers.
+CPU:
+   Physical Address and Linear Address Size (0x80000008/eax):
+      maximum physical address bits         = 0x30 (48)
+      maximum linear (virtual) address bits = 0x30 (48)
+      maximum guest physical address bits   = 0x0 (0)
+   Logical CPU cores (0x80000008/ecx):
+      number of CPU cores - 1 = 0x5f (95)
+      ApicIdCoreIdSize        = 0x7 (7)
+```
