--- Auto-Git Commit ---

--- a/Architecture/Learning/dropped/x86汇编语言_从实模式到保护模式/第3部分 32位保护模式/16. 分页机制和动态页面分配/1. 分页机制概述.md
+++ b/Architecture/Learning/dropped/x86汇编语言_从实模式到保护模式/第3部分 32位保护模式/16. 分页机制和动态页面分配/1. 分页机制概述.md
@@ -1,3 +1,17 @@
+
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [从虚拟地址到物理地址](#从虚拟地址到物理地址)
+- [1. 简单的分页模型](#1-简单的分页模型)
+- [2. 页目录、页表和页](#2-页目录-页表和页)
+  - [页表](#页表)
+  - [页目录（Page Directory Table，PDT）](#页目录page-directory-tablepdt)
+- [3. 地址变换的具体过程](#3-地址变换的具体过程)
+
+<!-- /code_chunk_output -->
+
 Intel处理器访问内存的基本策略是分段。在16位实模式下，段的起始位置必须16字节对齐，而且段的长度最大是64KB。
 
 进入32位保护模式之后，强化了分段功能，并提供了保护机制。此时，段可以起始于任何位置，段长度可以扩展到处理器的最大寻址范围边界。典型，早期32位处理器由32根地址总线，因此，段的长度可以扩展到4GB。
