--- a/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/2. paging机制下使用的资源.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/2. paging机制下使用的资源.md
@@ -3,16 +3,16 @@
 
 <!-- code_chunk_output -->
 
-* [1 寄存器](#1-寄存器)
-* [2 CPUID查询leaf](#2-cpuid查询leaf)
-	* [2.1 CPUID.01H leaf功能](#21-cpuid01h-leaf功能)
-	* [2.2 CPUID.07H leaf功能](#22-cpuid07h-leaf功能)
-	* [2.3 CPUID.80000001H leaf功能](#23-cpuid80000001h-leaf功能)
-* [3 寄存器的控制位](#3-寄存器的控制位)
-* [4 页转换表资源](#4-页转换表资源)
-	* [4.1 32位paging模式中](#41-32位paging模式中)
-	* [4.2 PAE paging模式中](#42-pae-paging模式中)
-	* [4.3 IA\-32e paging模式中](#43-ia-32e-paging模式中)
+- [1 寄存器](#1-寄存器)
+- [2 CPUID查询leaf](#2-cpuid查询leaf)
+  - [2.1 CPUID.01H leaf功能](#21-cpuid01h-leaf功能)
+  - [2.2 CPUID.07H leaf功能](#22-cpuid07h-leaf功能)
+  - [2.3 CPUID.80000001H leaf功能](#23-cpuid80000001h-leaf功能)
+- [3 寄存器的控制位](#3-寄存器的控制位)
+- [4 页转换表资源](#4-页转换表资源)
+  - [4.1 32位paging模式中](#41-32位paging模式中)
+  - [4.2 PAE paging模式中](#42-pae-paging模式中)
+  - [4.3 IA-32e paging模式中](#43-ia-32e-paging模式中)
 
 <!-- /code_chunk_output -->
 
@@ -75,9 +75,9 @@
 
 CR0和CR4有许多控制位被使用在paging机制上。
 
-① CR0.PG：在CR0.PE=1的基础上，置CR0.PG=1开启paging机制。
+① `CR0.PG`：在CR0.PE=1的基础上，置CR0.PG=1开启paging机制。
 
-② CR0.WP：对CR0.WP置位可以启用Write Protect功能，使Supervisor用户也无权对Read-only（只读）页进行修改。
+② `CR0.WP`：对CR0.WP置位可以启用Write Protect功能，使Supervisor用户也无权对Read-only（只读）页进行修改。
 
 ③ CR0.CD与CR0.NW：将影响到各级页转换表结构里的PCD和PWT标志，包括CR3。
 
@@ -139,7 +139,7 @@ PDPT大小可以是4x8=32字节, PDT和PT仍然是4KB大小, 512x8.
 
 PDPT大小可以是4x8=32字节, PDT是4KB
 
-## 4.3 IA\-32e paging模式中
+## 4.3 IA-32e paging模式中
 
 线性地址48位宽, 使用两级到四级的页转换表, 每个表项都是8字节宽, CR3是64位宽, 针对是否支持PCIDE功能, CR3使用不一样。
 
