--- a/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/4. PAE paging模式.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/4. PAE paging模式.md
@@ -3,38 +3,38 @@
 
 <!-- code_chunk_output -->
 
-* [1 基本原理](#1-基本原理)
-	* [1.1 开启PAE标志](#11-开启pae标志)
-	* [1.2 支持最高52位的物理地址](#12-支持最高52位的物理地址)
-	* [1.3 Table Entry（表项）的大小](#13-table-entry表项的大小)
-	* [1.4 页表的大小](#14-页表的大小)
-* [2 在Intel64下的CR3与PDPTE寄存器](#2-在intel64下的cr3与pdpte寄存器)
-	* [2.1 CR3](#21-cr3)
-	* [2.2 PDPTE寄存器](#22-pdpte寄存器)
-		* [2.2.1 PDPTE寄存器的加载](#221-pdpte寄存器的加载)
-		* [2.2.2 PDPTE寄存器的重新加载](#222-pdpte寄存器的重新加载)
-		* [2.2.3 Intel64下的新PAE paging模式](#223-intel64下的新pae-paging模式)
-* [3 在AMD64下的CR3](#3-在amd64下的cr3)
-* [4 PAE paging模式里的PDPTE结构](#4-pae-paging模式里的pdpte结构)
-* [5 PAE paging模式里的PDE结构](#5-pae-paging模式里的pde结构)
-	* [5.1 2M页面下的PDE结构](#51-2m页面下的pde结构)
-		* [5.1.1 XD（Execution Disable）标志位](#511-xdexecution-disable标志位)
-		* [5.1.2 Code页与Data页](#512-code页与data页)
-	* [5.2 4K页面下的PDE结构](#52-4k页面下的pde结构)
-* [6 PAE paging模式里的PTE结构](#6-pae-paging模式里的pte结构)
-* [7 使用和测试PAE paging模式](#7-使用和测试pae-paging模式)
-	* [7.1 设置PAE paging的页表结构](#71-设置pae-paging的页表结构)
-	* [7.2 一个非常难查找的bug](#72-一个非常难查找的bug)
-	* [7.3 开启PAE paging模式](#73-开启pae-paging模式)
-	* [7.4 开启paging机制](#74-开启paging机制)
-* [8 使用和测试Execution Disable功能](#8-使用和测试execution-disable功能)
-	* [8.1 测试一：尝试在XD页里执行代码](#81-测试一尝试在xd页里执行代码)
-	* [8.2 测试二：在PTE.XD=0的页里执行代码](#82-测试二在ptexd0的页里执行代码)
-	* [8.3 测试三：在\#PF handler里修复错误](#83-测试三在pf-handler里修复错误)
+- [基本原理](#基本原理)
+  - [1.1 开启PAE标志](#11-开启pae标志)
+  - [1.2 支持最高52位的物理地址](#12-支持最高52位的物理地址)
+  - [1.3 Table Entry（表项）的大小](#13-table-entry表项的大小)
+  - [1.4 页表的大小](#14-页表的大小)
+- [2 在Intel64下的CR3与PDPTE寄存器](#2-在intel64下的cr3与pdpte寄存器)
+  - [2.1 CR3](#21-cr3)
+  - [2.2 PDPTE寄存器](#22-pdpte寄存器)
+    - [2.2.1 PDPTE寄存器的加载](#221-pdpte寄存器的加载)
+    - [2.2.2 PDPTE寄存器的重新加载](#222-pdpte寄存器的重新加载)
+    - [2.2.3 Intel64下的新PAE paging模式](#223-intel64下的新pae-paging模式)
+- [3 在AMD64下的CR3](#3-在amd64下的cr3)
+- [4 PAE paging模式里的PDPTE结构](#4-pae-paging模式里的pdpte结构)
+- [5 PAE paging模式里的PDE结构](#5-pae-paging模式里的pde结构)
+  - [5.1 2M页面下的PDE结构](#51-2m页面下的pde结构)
+    - [5.1.1 XD（Execution Disable）标志位](#511-xdexecution-disable标志位)
+    - [5.1.2 Code页与Data页](#512-code页与data页)
+  - [5.2 4K页面下的PDE结构](#52-4k页面下的pde结构)
+- [6 PAE paging模式里的PTE结构](#6-pae-paging模式里的pte结构)
+- [7 使用和测试PAE paging模式](#7-使用和测试pae-paging模式)
+  - [7.1 设置PAE paging的页表结构](#71-设置pae-paging的页表结构)
+  - [7.2 一个非常难查找的bug](#72-一个非常难查找的bug)
+  - [7.3 开启PAE paging模式](#73-开启pae-paging模式)
+  - [7.4 开启paging机制](#74-开启paging机制)
+- [8 使用和测试Execution Disable功能](#8-使用和测试execution-disable功能)
+  - [8.1 测试一：尝试在XD页里执行代码](#81-测试一尝试在xd页里执行代码)
+  - [8.2 测试二：在PTE.XD=0的页里执行代码](#82-测试二在ptexd0的页里执行代码)
+  - [8.3 测试三：在\#PF handler里修复错误](#83-测试三在pf-handler里修复错误)
 
 <!-- /code_chunk_output -->
 
-# 1 基本原理
+# 基本原理
 
 在处理器支持PAE页转换机制的情况下，置**CR4.PAE=1开启PAE paging模式**，在**PAE paging模式**下virtual address（linear address）**依然使用32位宽(！！！**)，如下图所示。
 
@@ -56,11 +56,11 @@
 
 **4KB页面线性地址构成: 2(PDPT索引, 4个项) \+ 9(PDT索引, 512个项) \+ 9(PT索引, 512个项) \+ 12(Page offset, 4KB页**)
 
-**黑色线路**是**4K页面**映射方式，**PDE.PS清0**，PDE指向PT，再由线性地址的[20：12]域共9位来获得PTE表项，得出最终的4K page frame物理地址。线性地址的[11：0]域12位将是4K page frame内的offset值。
+**黑色线路**是**4K页面**映射方式，**PDE.PS清0**，PDE指向PT，再由线性地址的`[20：12]`域共9位来获得PTE表项，得出最终的4K page frame物理地址。线性地址的`[11：0]`域12位将是4K page frame内的offset值。
 
 ## 1.1 开启PAE标志
 
-在CPUID.01H：EDX[6].PAE位里查询PAE paging模式支持后置CR4.PAE为1值，这个PAE paing模式将**忽略PSE机制**（忽略CPUID.01H：EDX[3].PSE位和CR4.PSE控制位的作用），也不需要PSE\-36机制的支持。
+在`CPUID.01H：EDX[6].PAE`位里查询PAE paging模式支持后置CR4.PAE为1值，这个PAE paing模式将**忽略PSE机制**（忽略`CPUID.01H：EDX[3].PSE`位和CR4.PSE控制位的作用），也不需要PSE\-36机制的支持。
 
 ## 1.2 支持最高52位的物理地址
 
@@ -108,7 +108,7 @@
 
 ① 使用mov cr3，reg指令**更新CR3**时。
 
-② 在PAE paging模式下，CR0和CR3中与paging机制相关的控制位被修改时，它们包括：CR0.PG、CR0.CD和CR0.NW控制位；CR4.PAE、CR4.PGE、CR4.PSE和CR4.SMEP控制位。
+② 在PAE paging模式下，CR0和CR3中与paging机制相关的控制位被修改时，它们包括：`CR0.PG`、`CR0.CD`和`CR0.NW`控制位；`CR4.PAE`、`CR4.PGE`、`CR4.PSE`和`CR4.SMEP`控制位。
 
 ③ 在执行**任务切换加载CR3**时。
 
