--- a/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/1. 物理页面.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/1. 物理页面.md
@@ -3,15 +3,15 @@
 
 <!-- code_chunk_output -->
 
-* [1 处理器的最高物理地址（MAXPHYADDR）](#1-处理器的最高物理地址maxphyaddr)
-	* [1.1 最高物理地址空间的实现](#11-最高物理地址空间的实现)
-* [2 物理页面的大小](#2-物理页面的大小)
-* [3 页转换模式（Paging Mode）](#3-页转换模式paging-mode)
-	* [3.1 32位页转换模式](#31-32位页转换模式)
-	* [3.2 PSE\-36模式](#32-pse-36模式)
-	* [3.3 PSE\-36机制下32位paging模式里的最高物理地址](#33-pse-36机制下32位paging模式里的最高物理地址)
-	* [3.4 PAE页转换模式](#34-pae页转换模式)
-	* [3.5 IA\-32e页转换模式](#35-ia-32e页转换模式)
+- [1. 处理器的最高物理地址（MAXPHYADDR）](#1-处理器的最高物理地址maxphyaddr)
+  - [1.1. 最高物理地址空间的实现](#11-最高物理地址空间的实现)
+- [2. 物理页面的大小](#2-物理页面的大小)
+- [3. 页转换模式（Paging Mode）](#3-页转换模式paging-mode)
+  - [3.1. 32位页转换模式](#31-32位页转换模式)
+  - [3.2. PSE-36模式](#32-pse-36模式)
+    - [3.2.1. PSE-36机制下32位paging模式里的最高物理地址](#321-pse-36机制下32位paging模式里的最高物理地址)
+  - [3.3. PAE页转换模式](#33-pae页转换模式)
+  - [3.4. IA-32e页转换模式](#34-ia-32e页转换模式)
 
 <!-- /code_chunk_output -->
 
@@ -21,9 +21,9 @@
 
 处理器通过**paging机制**可以在**32位**和**48位**的**虚拟地址**上使用**36位**、**40位**甚至**52位宽**的**物理地址**，由paging机制提供的各级**page\-translation table（页转换表**）实现。
 
-# 1 处理器的最高物理地址（MAXPHYADDR）
+# 1. 处理器的最高物理地址（MAXPHYADDR）
 
-**最高物理地址**的专用语**MAXPHYADDR**在整个x86/x64体系中许多地方都需要用到，我们可以通过第4章里所说的**CPUID.80000008H leaf获得MAXPHYADDR值**。
+**最高物理地址**的专用语**MAXPHYADDR**在整个x86/x64体系中许多地方都需要用到，我们可以通过第4章里所说的`CPUID.80000008H leaf`获得**MAXPHYADDR**值。
 
 代码清单11-1（lib\lib32.asm）：
 ```x86asm
@@ -55,7 +55,7 @@ do_get_MAXPHYADDR_done：
       ret
 ```
 
-这个\_\_get\_MAXPHYADDR()函数用于得到MAXPHYADDR值（**最大物理地址位数**），通过查询CPUID.80000008H：EAX[7：0]叶功能，如果**不支持80000008H leaf**，则通过查询**CPUID.01H：EDX[17**]看是否支持**PSE\-36**功能，如果不支持，就**返回32位**。
+这个\_\_get\_MAXPHYADDR()函数用于得到MAXPHYADDR值（**最大物理地址位数**），通过查询`CPUID.80000008H：EAX[7：0]`叶功能，如果**不支持80000008H leaf**，则通过查询`CPUID.01H：EDX[17]`看是否支持**PSE\-36**功能，如果不支持，就**返回32位**。
 
 代码清单11-2（topic11\ex11-1\protected.asm）：
 ```x86asm
@@ -82,7 +82,7 @@ call puts
 
 在笔者工作的这台Arrandale核心（Westmere架构）Core i5移动处理器机器上，只支持最高36位的物理地址，属于上一代的Core i5处理器。而在一台AMD64的phenom机器上得到的结果是40位的MAXPHYADDR值。
 
-## 1.1 最高物理地址空间的实现
+## 1.1. 最高物理地址空间的实现
 
 在x86/x64中依据处理器架构不同，在可见的描述里有**3种尺寸的最高物理地址值**。
 
@@ -92,7 +92,7 @@ call puts
 
 ③ **52位**：这是x64体系描述中的最高实现值，然而目前尚未有哪个处理器架构实现了52位的物理地址宽度。
 
-# 2 物理页面的大小
+# 2. 物理页面的大小
 
 在整个x86/x64体系里共有**4种页面尽寸**，如下所示。
 
@@ -104,7 +104,7 @@ call puts
 
 这些页面的页内的offset值如上图所示，在**IA\-32e模式**下**线性地址高16位**作为**符号扩展位**，因此只实现了48位线性地址。
 
-# 3 页转换模式（Paging Mode）
+# 3. 页转换模式（Paging Mode）
 
 按**Intel的分类**，**页转换模式（paging mode**）可分三类。
 
@@ -120,7 +120,7 @@ call puts
 
 32位页转换模式也就是normal模式或者non\-PAE模式，而**第四类PSE\-36模式在较早以前的机器**才有意义，在新近的处理器上都支持PSE\-36机制，对于新机器来说分出PSE\-36模式没多大意义。它使处理器在non\-PAE模式下能够使用超过32位的物理地址。
 
-## 3.1 32位页转换模式
+## 3.1. 32位页转换模式
 
 在**32位页转换模式**里，**CR4.PAE=0关闭PAE**，**32位的线性地址**可以映射到超过**32位的物理地址**上（**由MAXPHYADDR所决定**），处理器可以使用**2种页转换表**。
 
@@ -130,7 +130,7 @@ call puts
 
 这些页转换表结构都是32位宽的，意味着只能提供**最高32位的物理地址**，除非支持**PSE\-36模式**。
 
-## 3.2 PSE\-36模式
+## 3.2. PSE-36模式
 
 PSE\-36模式应当归属于32位页转换模式里，在32位页转换模式里，当处理器支持PSE\-36机制时，处理器最高可以使用40位的物理地址。PSE\-36模式**仅使用在4M页面的页转换表**上。
 
@@ -138,11 +138,11 @@ PSE\-36模式应当归属于32位页转换模式里，在32位页转换模式里
 
 上面这个图揭示了32位页转换模式和PSE\-36模式的关系，当CR4.PSE=**1**，并且**PDE.PS=1**时，处理器使用**4M页面的页转换表结构**。
 
-当处理器支持PSE\-36功能时，可以使用**高于4G地址**，最高可以为**40位的物理地址**（36位或40位物理地址取决于**MAXPHYADDR**值）。当处理器不支持PSE\-36功能时，只能使用4G内的物理地址（32位物理地址）。
+当处理器支持`PSE-36`功能时，可以使用**高于4G地址**，最高可以为**40位的物理地址**（36位或40位物理地址取决于**MAXPHYADDR**值）。当处理器不支持PSE\-36功能时，只能使用4G内的物理地址（32位物理地址）。
 
-软件可以使用CPUID.01H：EDX[17]叶功能来查询是否支持PSE-36机制，正如在代码清单11-1里get_MAXPHYADDR（）函数所使用的那样，在CPUID 01H leaf里返回EDX寄存器的Bit 17位是PSE-36支持位。
+软件可以使用`CPUID.01H：EDX[17]`叶功能来查询是否支持PSE-36机制，正如在代码清单11-1里get_MAXPHYADDR（）函数所使用的那样，在CPUID 01H leaf里返回EDX寄存器的Bit 17位是PSE-36支持位。
 
-## 3.3 PSE\-36机制下32位paging模式里的最高物理地址
+### 3.2.1. PSE-36机制下32位paging模式里的最高物理地址
 
 上图中，在PSE-36功能支持32位页转换模式里最高物理地址可以是36位或40位。
 
@@ -156,9 +156,9 @@ PSE\-36模式应当归属于32位页转换模式里，在32位页转换模式里
 
 这也说明32位页转换模式下最高可能使用40位的物理地址。
 
-## 3.4 PAE页转换模式
+## 3.3. PAE页转换模式
 
-当开启CR4.PAE=1时，处理器使用PAE页转换模式。在PAE模式下可以使用最高52位的物理地址，当前x86/x64体系中所描述的最高的物理地址就是52位。
+当开启`CR4.PAE=1`时，处理器使用PAE页转换模式。在PAE模式下可以使用最高52位的物理地址，当前x86/x64体系中所描述的最高的物理地址就是52位。
 
 在PAE页转换模式下，使用2种页面转换表结构。
 
@@ -166,13 +166,13 @@ PSE\-36模式应当归属于32位页转换模式里，在32位页转换模式里
 
 ② 2M页面的转换表结构。
 
-在PAE页转换模式里，处理器会忽略CR4.PSE控制位的作用，无须使用PSE-36机制。
+在PAE页转换模式里，处理器会**忽略**`CR4.PSE`控制位的作用，无须使用PSE-36机制。
 
-## 3.5 IA\-32e页转换模式
+## 3.4. IA-32e页转换模式
 
-使用IA\-32e paging模式需要处理器支持IA\-32e模式（即long\-mode），进入了IA\-32e工作模式也就使用了IA\-32e paging模式。
+使用`IA-32e paging`模式需要处理器支持**IA-32e模式**（即`long-mode`），进入了`IA-32e`工作模式也就使用了`IA-32e paging`模式。
 
-IA\-32e paging必须**开启CR0.PAE功能**。因此，IA\-32e paging模式是在PAE的基础上扩展而来，增加了一级页转换表结构。IA\-32e paging使用4级页转换结构，包括下面的页面结构。
+`IA-32e paging`必须**开启CR0.PAE功能**。因此，`IA-32e paging`模式是在PAE的基础上扩展而来，增加了一级页转换表结构。`IA-32e paging`使用4级页转换结构，包括下面的页面结构。
 
 ① 4K页面的转换表结构。
 
