--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/1. 物理页面.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/1. 物理页面.md
@@ -26,6 +26,7 @@
 **最高物理地址**的专用语**MAXPHYADDR**在整个x86/x64体系中许多地方都需要用到，我们可以通过第4章里所说的`CPUID.80000008H leaf`获得**MAXPHYADDR**值。
 
 代码清单11-1（lib\lib32.asm）：
+
 ```x86asm
 ；----------------------------------------------
 ； get_MAXPHYADDR（）：得到 MAXPHYADDR 值
@@ -55,9 +56,10 @@ do_get_MAXPHYADDR_done：
       ret
 ```
 
-这个\_\_get\_MAXPHYADDR()函数用于得到MAXPHYADDR值（**最大物理地址位数**），通过查询`CPUID.80000008H：EAX[7：0]`叶功能，如果**不支持80000008H leaf**，则通过查询`CPUID.01H：EDX[17]`看是否支持**PSE\-36**功能，如果不支持，就**返回32位**。
+这个`__get_MAXPHYADDR()`函数用于得到MAXPHYADDR值（**最大物理地址位数**），通过查询`CPUID.80000008H：EAX[7：0]`叶功能，如果**不支持80000008H leaf**，则通过查询`CPUID.01H：EDX[17]`看是否支持**PSE\-36**功能，如果不支持，就**返回32位**。
 
 代码清单11-2（topic11\ex11-1\protected.asm）：
+
 ```x86asm
 mov esi，msg1
 call puts
@@ -86,7 +88,7 @@ call puts
 
 在x86/x64中依据处理器架构不同，在可见的描述里有**3种尺寸的最高物理地址值**。
 
-① **36位**：在Intel平台的桌面处理器上普遍实现了36位的最高物理地址值，可寻址**64G空间**。
+① **36位**：在Intel平台的桌面处理器上普遍实现了36位的最高物理地址值，可寻址**64G**空间。
 
 ② **40位**：在Intel的服务器产品和AMD平台上普遍实现40位的最高物理地值，可寻址空间为**1TB**。
 
@@ -144,7 +146,7 @@ PSE\-36模式应当归属于32位页转换模式里，在32位页转换模式里
 
 ### 3.2.1. PSE-36机制下32位paging模式里的最高物理地址
 
-上图中，在PSE-36功能支持32位页转换模式里最高物理地址可以是36位或40位。
+上图中，在PSE-36功能支持32位页转换模式里**最高物理地址**可以是**36位**或**40位**。
 
 这个36位和40位最高物理地址如何确定？由下面的方法决定。
 
@@ -158,7 +160,7 @@ PSE\-36模式应当归属于32位页转换模式里，在32位页转换模式里
 
 ## 3.3. PAE页转换模式
 
-当开启`CR4.PAE=1`时，处理器使用PAE页转换模式。在PAE模式下可以使用最高52位的物理地址，当前x86/x64体系中所描述的最高的物理地址就是52位。
+当开启`CR4.PAE=1`时，处理器使用PAE页转换模式。在PAE模式下可以使用最高52位的物理地址，当前x86/x64体系中所描述的最高的物理地址就是**52位**。
 
 在PAE页转换模式下，使用2种页面转换表结构。
 
