--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/1. 物理页面.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/1. 物理页面.md
@@ -110,11 +110,11 @@ call puts
 
 按**Intel的分类**，**页转换模式（paging mode**）可分三类。
 
-① 32\-bit paging（**32位页转换模式**）：即**non-PAE模式**。
+① `32-bit paging`（**32位页转换模式**）：即**non-PAE模式**。
 
-② PAE paging（**Physical Address Extensions页转换模式**）。
+② `PAE paging`（**Physical Address Extensions页转换模式**）。
 
-③ IA\-32e paging（**IA\-32e页转换模式**）：对应于**AMD64的long\-mode**。
+③ `IA-32e paging`（**IA\-32e页转换模式**）：对应于**AMD64的long\-mode**。
 
 这个分类似乎是按照virtual address宽度和映射的物理地址大小来做的。不过笔者认为：在**32位页转换模式**下似乎还可以分出**第四类**：
 
