--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/3. KVM/3. CPU虚拟化/4. 代码分析.md
@@ -987,7 +987,7 @@ static long kvm_vcpu_ioctl(struct file *filp,
 
 ## 7.2. 整体流程
 
-**执行vCPU**的请求首先发送到**kvm\_vcpu\_ioctl函数**中，然后**加载vCPU参数**，调用`kvm_arch_vcpu_ioctl_run`函数进入**具体的vCPU运行**环节。(arch/x86/kvm/x86.c)
+**执行vCPU**的请求首先发送到**kvm\_vcpu\_ioctl函数**中，然后**加载vCPU参数**，调用`kvm_arch_vcpu_ioctl_run`函数进入**具体的vCPU运行**环节。(`arch/x86/kvm/x86.c`)
 
 ```cpp
 kvm_arch_vcpu_ioctl_run()                	// vcpu运行
@@ -2096,7 +2096,6 @@ SYM_FUNC_END(vmx_vmexit)
 
 在执行`call vmx_vmenter`时候会将当前ip压栈(即下一条指令`jbe 2f`), 在`vmx_vmenter`中会进入虚拟机模式, 当虚拟机vm-exit时候, 会调用到`vmx_vmexit`, 而这里面是一个`ret`, 会执行`pop ip`, 从而在这里虚拟机vm-exit后会执行`call vmx_vmenter`的下一条指令(`jbe 2f`). 总结来说, 本质上就是先进行函数调用进入虚拟机模式, 然后在`vm-exit`后从这个函数返回, 也就是整个流程都是在一个函数中.
 
-
 ```cpp
 void vmx_update_host_rsp(struct vcpu_vmx *vmx, unsigned long host_rsp)
 {
@@ -2106,7 +2105,6 @@ void vmx_update_host_rsp(struct vcpu_vmx *vmx, unsigned long host_rsp)
         }
 }
 ```
-
 
 Guest OS运行在VMX non-root模式中，当执行默写特权执行时，则会引发VM Exit。Guest Exit Reason保存在MSR寄存器中。 `arch/x86/kvm/vmx.c:kvm_vmx_exit_handlers` 定义了guest Exit的**内核处理函数**。 例如 `[EXIT_REASON_CR_ACCESS] = handle_cr`, 当Guest OS访问cr寄存器时，即会产生 VM Exit，将控制权交予kvm，调用`handle_cr`处理。对应到**KVM**就是`vCPU->kvm_run->exit_reason`。KVM根据`exit_reason`做相应的处理。 
 
