--- Auto-Git Commit ---

--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/2. VMSAVE和VMLOAD指令[code].md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/2. VMSAVE和VMLOAD指令[code].md
@@ -1,6 +1,6 @@
 
 
-在`vcpu run`时候, 将vmcb物理地址作为参数传递, 然后作为`vmload`命令的参数.
+在`vcpu run`时候, 将**vmcb物理地址**作为参数传递, 然后作为`vmload`命令的参数.
 
 ```
 //arch/x86/kvm/svm/vmenter.S
