--- Auto-Git Commit ---

--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作[code].md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作[code].md
@@ -17,7 +17,7 @@
 
 # 1. VMCB: 虚拟机控制块
 
-1. VMCB是一个`per-vcpu`的, 每个vcpu一个(所以在创建vcpu时候初始化), vmcb的layout见附件部分(代码分析也是一样)
+1. VMCB是一个`per-vcpu`的, 每个vcpu一个(所以在创建vcpu时候初始化), vmcb的layout见附件部分(代码分析也见附件)
 2. 在vcpu run时候, 作为vmrun指令的参数
 
 ## 1.1. 创建vcpu时分配vmcb并清零
@@ -105,7 +105,7 @@ SYM_FUNC_START(__svm_vcpu_run)
 
 # 2. 主机状态保存区域
 
-1. host save area是一个`per-cpu`的, 用来保存host处理器状态, 每个物理cpu一个(所以放在模块初始化时候进行初始化).
+1. host save area是一个`per-cpu`的, 用来保存**host处理器状态**, 每个物理cpu一个(所以放在模块初始化时候进行初始化).
 2. 创建虚拟机时候, 硬件使能阶段, 将这个区域的物理地址赋值给`VM_HSAVE_PA MSR`
 3. 这部分内容仅仅被处理器自己使用, vmm不会操作
 
