--- Auto-Git Commit ---

--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作[code].md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作[code].md
@@ -105,7 +105,7 @@ SYM_FUNC_START(__svm_vcpu_run)
 
 # 2. 主机状态保存区域
 
-1. host save area是一个`per-cpu`的, 用来保存**host处理器状态**, 每个物理cpu一个(所以放在模块初始化时候进行初始化).
+1. host save area是一个`per-cpu`的, 用来保存**host处理器状态**, **每个物理cpu一个**(所以放在模块初始化时候进行初始化).
 2. 创建虚拟机时候, 硬件使能阶段, 将这个区域的物理地址赋值给`VM_HSAVE_PA MSR`
 3. 这部分内容仅仅被处理器自己使用, vmm不会操作
 
@@ -123,8 +123,9 @@ struct svm_cpu_data {
         u32 next_asid;
         u32 min_asid;
         struct kvm_ldttss_desc *tss_desc;
-
+        // host 状态域
         struct page *save_area;
+        // 当前物理CPU使用的vmcb
         struct vmcb *current_vmcb;
 
         /* index = sev_asid, value = vmcb pointer */
@@ -133,6 +134,8 @@ struct svm_cpu_data {
 
 DECLARE_PER_CPU(struct svm_cpu_data *, svm_data);
 ```
+
+注: 这个结构体的每一个信息都是`per-cpu`的, 即**每个物理CPU都会有一个**.
 
 在**模块初始化**时候`svm_hardware_setup()`, 初始化了每个CPU的`svm_data` 
 
