--- a/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/2. paging机制下使用的资源.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/2. paging机制下使用的资源.md
@@ -36,7 +36,7 @@
 
 在**01H叶**里**返回的ECX和EDX寄存器**包括了**大多数paging机制**的**support位**。
 
-① ECX[17].PCID位：指示处理器**是否支持PCID功能**，支持的话可以**开启CR4.PCIDE控制位**。
+① `ECX[17].PCID`位：指示处理器**是否支持PCID功能**，支持的话可以**开启CR4.PCIDE控制位**。
 
 ② EDX[3].PSE位：指示**是否支持4M页面**，支持的话可以对**CR4.PSE控制位置位**。在**32位paging模式**下通过**PDE.PS=1**来使用**4M页面**。这个support位**与PSE\-36位是不同的意义**，但PSE\-36功能需要配合4M页面使用。
 
@@ -46,7 +46,7 @@
 
 ⑤ EDX[16].PAT位：指示是否支持**PAT（Page Attribute Table）功能**。
 
-⑥ EDX[13].PGE位：指示是否支持**PGE（Page Global Enable）功能**，支持的话可以置CR4.PGE=1支持Global page功能。
+⑥ `EDX[13].PGE`位：指示是否支持**PGE（Page Global Enable）功能**，支持的话可以置`CR4.PGE=1`支持Global page功能。
 
 ## 2.2 CPUID.07H leaf功能
 
