--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/2. paging机制下使用的资源.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/2. paging机制下使用的资源.md
@@ -44,7 +44,7 @@
 
 ④ EDX[6].PAE位：指示是否支持**PAE（Physical Address Extensions）模式**，是的话通过对CR4.PAE置位使用PAE paging模式，并可以使用**36位、40位或52位的最高物理地址**，依赖于**MAXPHYADDR值**。
 
-⑤ EDX[16].PAT位：指示是否支持**PAT（Page Attribute Table）功能**。
+⑤ `EDX[16].PAT`位：指示是否支持**PAT（Page Attribute Table）功能**。
 
 ⑥ `EDX[13].PGE`位：指示是否支持**PGE（Page Global Enable）功能**，支持的话可以置`CR4.PGE=1`支持Global page功能。
 
