--- a/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/2. paging机制下使用的资源.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/2. paging机制下使用的资源.md
@@ -3,12 +3,12 @@
 
 <!-- code_chunk_output -->
 
-- [1 寄存器](#1-寄存器)
-- [2 CPUID查询leaf](#2-cpuid查询leaf)
-  - [2.1 CPUID.01H leaf功能](#21-cpuid01h-leaf功能)
-  - [2.2 CPUID.07H leaf功能](#22-cpuid07h-leaf功能)
-  - [2.3 CPUID.80000001H leaf功能](#23-cpuid80000001h-leaf功能)
-- [3 寄存器的控制位](#3-寄存器的控制位)
+- [寄存器](#寄存器)
+- [CPUID查询leaf](#cpuid查询leaf)
+  - [CPUID.01H leaf功能](#cpuid01h-leaf功能)
+  - [CPUID.07H leaf功能](#cpuid07h-leaf功能)
+  - [CPUID.80000001H leaf功能](#cpuid80000001h-leaf功能)
+- [寄存器的控制位](#寄存器的控制位)
 - [4 页转换表资源](#4-页转换表资源)
   - [4.1 32位paging模式中](#41-32位paging模式中)
   - [4.2 PAE paging模式中](#42-pae-paging模式中)
@@ -16,7 +16,7 @@
 
 <!-- /code_chunk_output -->
 
-# 1 寄存器
+# 寄存器
 
 下面的寄存器需要被使用。
 
@@ -28,50 +28,50 @@
 
 **IA32\_EFER**开启IA\-32e模式（long\-mode）。
 
-# 2 CPUID查询leaf
+# CPUID查询leaf
 
 在**paging机制**里某些功能需要**先查询处理器是否支持**，在支持的情况下才可以**enable**功能。
 
-## 2.1 CPUID.01H leaf功能
+## CPUID.01H leaf功能
 
 在**01H叶**里**返回的ECX和EDX寄存器**包括了**大多数paging机制**的**support位**。
 
 ① `ECX[17].PCID`位：指示处理器**是否支持PCID功能**，支持的话可以**开启CR4.PCIDE控制位**。
 
-② EDX[3].PSE位：指示**是否支持4M页面**，支持的话可以对**CR4.PSE控制位置位**。在**32位paging模式**下通过**PDE.PS=1**来使用**4M页面**。这个support位**与PSE\-36位是不同的意义**，但PSE\-36功能需要配合4M页面使用。
+② `EDX[3].PSE`位：指示**是否支持4M页面**，支持的话可以对**CR4.PSE控制位置位**。在**32位paging模式**下通过**PDE.PS=1**来使用**4M页面**。这个support位**与PSE\-36位是不同的意义**，但PSE\-36功能需要配合4M页面使用。
 
-③ EDX[17].PSE\-36位：如果支持：指示在**32位paging模式**下，PDE能提供**最高40位的物理地址**。那么PDE[16：13]是36位物理地址的高4位，或者PDE[20：13]是40位物理地址的高8位。如果**不支持则这些位为保留位**。
+③ `EDX[17].PSE-36`位：如果支持：指示在**32位paging模式**下，PDE能提供**最高40位的物理地址**。那么PDE[16：13]是36位物理地址的高4位，或者PDE[20：13]是40位物理地址的高8位。如果**不支持则这些位为保留位**。
 
-④ EDX[6].PAE位：指示是否支持**PAE（Physical Address Extensions）模式**，是的话通过对CR4.PAE置位使用PAE paging模式，并可以使用**36位、40位或52位的最高物理地址**，依赖于**MAXPHYADDR值**。
+④ `EDX[6].PAE`位：指示是否支持**PAE（Physical Address Extensions）模式**，是的话通过对CR4.PAE置位使用PAE paging模式，并可以使用**36位、40位或52位的最高物理地址**，依赖于**MAXPHYADDR值**。
 
 ⑤ `EDX[16].PAT`位：指示是否支持**PAT（Page Attribute Table）功能**。
 
 ⑥ `EDX[13].PGE`位：指示是否支持**PGE（Page Global Enable）功能**，支持的话可以置`CR4.PGE=1`支持Global page功能。
 
-## 2.2 CPUID.07H leaf功能
+## CPUID.07H leaf功能
 
 在07H叶的0H子叶里（EAX=07H，ECX=0H）返回以下内容。
 
-① EBX[7].SMEP位：指示是否支持SMEP（Supervisor-Mode Execution Prevention）功能，是的话可以对CR4.SMEP控制位进行置位。
+① `EBX[7].SMEP`位：指示是否支持SMEP（Supervisor-Mode Execution Prevention）功能，是的话可以对CR4.SMEP控制位进行置位。
 
-② EBX[10].INVPCID位：指示是否支持INVPCID指令。
+② `EBX[10].INVPCID`位：指示是否支持INVPCID指令。
 
-## 2.3 CPUID.80000001H leaf功能
+## CPUID.80000001H leaf功能
 
 在80000001H叶里主要是针对Intel64和AMD64机器，即支持long-mode的机器。
 
-① EDX[29].LM位：指示是否支持Intel64或long-mode。
+① `EDX[29].LM`位：指示是否支持Intel64或long-mode。
 
-② EDX[20].XD位：在AMD64中是NX位，指示是否支持Execution Disable功能。是的话可以在PAE模式和IA-32e页转换模式里使用XD位。
+② `EDX[20].XD`位：在AMD64中是NX位，指示是否支持Execution Disable功能。是的话可以在PAE模式和IA-32e页转换模式里使用XD位。
 
-③ EDX[26].1G-page位：指示处理器是否支持1G页面。CPUID.80000008H leaf功能
+③ `EDX[26].1G-page`位：指示处理器是否支持1G页面。CPUID.80000008H leaf功能
 这个叶功能将返回MAXPHYADDR值和最高virtual address值。
 
-① EAX[7：0]：返回MAXPHYADDR值。
+① `EAX[7：0]`：返回MAXPHYADDR值。
 
-② EAX[15：8]：返回最高virtual address值。
+② `EAX[15：8]`：返回最高virtual address值。
 
-# 3 寄存器的控制位
+# 寄存器的控制位
 
 CR0和CR4有许多控制位被使用在paging机制上。
 
@@ -79,9 +79,9 @@ CR0和CR4有许多控制位被使用在paging机制上。
 
 ② `CR0.WP`：对CR0.WP置位可以启用Write Protect功能，使Supervisor用户也无权对Read-only（只读）页进行修改。
 
-③ CR0.CD与CR0.NW：将影响到各级页转换表结构里的PCD和PWT标志，包括CR3。
+③ `CR0.CD`与`CR0.NW`：将影响到各级页转换表结构里的PCD和PWT标志，包括CR3。
 
-④ CR4.PSE：置CR4.PSE=1时，配合PDE.PS标志位在32位paging模式里使用4M页面。
+④ `CR4.PSE`：置CR4.PSE=1时，配合PDE.PS标志位在32位paging模式里使用4M页面。
 
 ⑤ CR4.PAE：置CR4.PAE=1时，开启PAE paging模式。CR4.PAE控制位将忽略CR4.PSE的作用。
 
@@ -97,7 +97,7 @@ CR0和CR4有许多控制位被使用在paging机制上。
 
 ⑪ IA32\_EFER.NXE：置IA32\_EFER.NXE=1时，在PAE paging模式和IA\-32e paging模式里启用Execution Disable功能。
 
-# 4 页转换表资源
+# 页转换表资源
 
 处理器paging机制里使用的**各级页转换表**，最终是为了查找线性地址映射到物理地址空间上相应的page frame，再由page frame基地址加上page offset值得出最终的物理地址。
 
