--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/2. paging机制下使用的资源.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第11章 x86x64保护模式体系（下）/2. paging机制下使用的资源.md
@@ -3,20 +3,20 @@
 
 <!-- code_chunk_output -->
 
-- [寄存器](#寄存器)
-- [CPUID查询leaf](#cpuid查询leaf)
-  - [CPUID.01H leaf功能](#cpuid01h-leaf功能)
-  - [CPUID.07H leaf功能](#cpuid07h-leaf功能)
-  - [CPUID.80000001H leaf功能](#cpuid80000001h-leaf功能)
-- [寄存器的控制位](#寄存器的控制位)
-- [4 页转换表资源](#4-页转换表资源)
-  - [4.1 32位paging模式中](#41-32位paging模式中)
-  - [4.2 PAE paging模式中](#42-pae-paging模式中)
-  - [4.3 IA-32e paging模式中](#43-ia-32e-paging模式中)
+- [1. 寄存器](#1-寄存器)
+- [2. CPUID查询leaf](#2-cpuid查询leaf)
+  - [2.1. CPUID.01H leaf功能](#21-cpuid01h-leaf功能)
+  - [2.2. CPUID.07H leaf功能](#22-cpuid07h-leaf功能)
+  - [2.3. CPUID.80000001H leaf功能](#23-cpuid80000001h-leaf功能)
+- [3. 寄存器的控制位](#3-寄存器的控制位)
+- [4. 页转换表资源](#4-页转换表资源)
+  - [4.1. 32位paging模式中](#41-32位paging模式中)
+  - [4.2. PAE paging模式中](#42-pae-paging模式中)
+  - [4.3. IA-32e paging模式中](#43-ia-32e-paging模式中)
 
 <!-- /code_chunk_output -->
 
-# 寄存器
+# 1. 寄存器
 
 下面的寄存器需要被使用。
 
@@ -28,11 +28,11 @@
 
 **IA32\_EFER**开启IA\-32e模式（long\-mode）。
 
-# CPUID查询leaf
+# 2. CPUID查询leaf
 
 在**paging机制**里某些功能需要**先查询处理器是否支持**，在支持的情况下才可以**enable**功能。
 
-## CPUID.01H leaf功能
+## 2.1. CPUID.01H leaf功能
 
 在**01H叶**里**返回的ECX和EDX寄存器**包括了**大多数paging机制**的**support位**。
 
@@ -48,7 +48,7 @@
 
 ⑥ `EDX[13].PGE`位：指示是否支持**PGE（Page Global Enable）功能**，支持的话可以置`CR4.PGE=1`支持Global page功能。
 
-## CPUID.07H leaf功能
+## 2.2. CPUID.07H leaf功能
 
 在07H叶的0H子叶里（EAX=07H，ECX=0H）返回以下内容。
 
@@ -56,7 +56,7 @@
 
 ② `EBX[10].INVPCID`位：指示是否支持INVPCID指令。
 
-## CPUID.80000001H leaf功能
+## 2.3. CPUID.80000001H leaf功能
 
 在80000001H叶里主要是针对Intel64和AMD64机器，即支持long-mode的机器。
 
@@ -71,7 +71,7 @@
 
 ② `EAX[15：8]`：返回最高virtual address值。
 
-# 寄存器的控制位
+# 3. 寄存器的控制位
 
 CR0和CR4有许多控制位被使用在paging机制上。
 
@@ -97,7 +97,7 @@ CR0和CR4有许多控制位被使用在paging机制上。
 
 ⑪ IA32\_EFER.NXE：置IA32\_EFER.NXE=1时，在PAE paging模式和IA\-32e paging模式里启用Execution Disable功能。
 
-# 页转换表资源
+# 4. 页转换表资源
 
 处理器paging机制里使用的**各级页转换表**，最终是为了查找线性地址映射到物理地址空间上相应的page frame，再由page frame基地址加上page offset值得出最终的物理地址。
 
@@ -105,7 +105,7 @@ CR0和CR4有许多控制位被使用在paging机制上。
 
 在三种paging模式里，根据不同的页面尺寸使用**不同的页转换表结构**。
 
-## 4.1 32位paging模式中
+## 4.1. 32位paging模式中
 
 **线性地址是32位宽**, 采用一级或两级页转换表, 每个表项大小是4字节宽, CR3使用32位。
 
@@ -121,7 +121,7 @@ CR0和CR4有许多控制位被使用在paging机制上。
 
 **一个PDT大小是4KB**
 
-## 4.2 PAE paging模式中
+## 4.2. PAE paging模式中
 
 **线性地址32位宽**, 使用两级或三级页转换表, **每个表项8字节宽**, CR3还是32位, 但只使用了27位, 拼凑了32位PDPT物理地址。
 
@@ -139,7 +139,7 @@ PDPT大小可以是4x8=32字节, PDT和PT仍然是4KB大小, 512x8.
 
 PDPT大小可以是4x8=32字节, PDT是4KB
 
-## 4.3 IA-32e paging模式中
+## 4.3. IA-32e paging模式中
 
 线性地址48位宽, 使用两级到四级的页转换表, 每个表项都是8字节宽, CR3是64位宽, 针对是否支持PCIDE功能, CR3使用不一样。
 
