--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/0. APIC虚拟化和虚拟中断/0. 概述 done.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/0. APIC虚拟化和虚拟中断/0. 概述 done.md
@@ -1,19 +1,5 @@
-VMCS包括一些**控制信息**, 能实现
-* 中断的虚拟化
-* 高级可编程中断控制器（APIC）的虚拟化
 
-使用这些**控制信息**时，处理器可以
-* 模拟对APIC的多次访问，
-* 跟踪**虚拟APIC的状态**，
-* deliver虚拟中断
-
-上面所有这些操作都是在**VMX非根模式**下完成的，而没有`VM exit`。
-
-注: 在大多数情况下，VMM**不需要注入虚拟中断**作为`VM entry`的一部分。
-
-处理器使用由VMM标识的`virtual APIC page`(**虚拟APIC页面**)跟踪**虚拟APIC的状态**。 `第29.1节`讨论了`virtual APIC page`以及处理器如何使用它来跟踪虚拟APIC的状态。
-
-以下是与APIC虚拟化和中断虚拟化相关的`VM-execution controls`（有关这些控制位的位置，请参见第24.6节）：
+29.1 讨论了 virtual-APIC page和处理器怎么利用这个追踪虚拟APIC的状态.
 
 * `Virtual-interrupt delivery`(**虚拟中断传递**)。当该控制位使能, 可以**评估和传送pending的虚拟中断**（第29.2节）。它还可以使能对APIC**寄存器写入的模拟**（基于内存映射或基于MSR）, 这些寄存器控制着**中断优先级**。
 
