--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
@@ -26,6 +26,14 @@
 
 注意：无论是虚拟化 **xAPIC** 模式还是 **x2APIC** 模式，都会存在 `virtual-APIC page` 页面; 而 `APIC-access page`页面仅仅在 xapic 模式中存在.
 
+
+根据某些VM执行控件的设置，处理器可以使用类似于本地APIC执行的功能来虚拟化virtual-APIC页面上的某些字段。 第29.1.1节确定并定义了这些字段。 第29.1.2节，第29.1.3节，第29.1.4节和第29.1.5节详细介绍了虚拟化对其中某些字段的更新所采取的措施。
+
+除了与虚拟APIC寄存器（在第29.1.1节中定义）相对应的字段之外，软件可以在VMX非根操作中修改逻辑处理器的当前VMCS引用的virtual-APIC页面。 （这是第24.11.4节中给出的一般要求的例外。）
+
+
+
+
 # 2. 虚拟 local APC 寄存器
 
 `virtual-APIC page` 页面内存在物理 local APIC 对应的一份虚拟寄存器。表 7-2 列出了可访问的虚拟 local APIC 寄存器.
