--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/5. virtual-APIC page.md
@@ -20,7 +20,7 @@
 
     * "`virtual-interrupt delivery`"为 0 时，只有偏移量为 **80H** 的 **VTPR** 寄存器(`virtual-TPR`）是有效的。**其他位置的数据属于无效**（不可访问）。
 
-    * "`virtual-interrupt delivery`"为 1 时，除了偏移量为 **80H** 的 **VTPR** 寄存器外，还有偏移量为 **BOH** 的 **VEZOI** 寄存器（`virtual-EOI`），以及偏移量为 **300H** 的 **VICR** 寄存器（`virtual-ICR`）的**低 32 位**可以进行**写访问**，但**不能进行读访问**! **其他位置的数据属于无效**（不可访问）。
+    * "`virtual-interrupt delivery`"为 1 时，除了偏移量为 **80H** 的 **VTPR** 寄存器外，还有偏移量为 **BOH** 的 **VEOI** 寄存器（`virtual-EOI`），以及偏移量为 **300H** 的 **VICR** 寄存器（`virtual-ICR`）的**低 32 位**可以进行**写访问**，但**不能进行读访问**! **其他位置的数据属于无效**（不可访问）。
 
 `virtual-APIC page` 页面的 64 位**物理地址**需要在 `virtual-APIC address` 字段里提供(VMCS 中 `VM-execution control` 域, 64位)。这个 4K 页面属于 VMCS 区城所引用的数据结构区域（例如 IO bitmap 与 MSR  bitmap), VMM 在初始化 VMCS 区域时需要为 VM 分配这样的一个 4K 页面。
 
