--- a/Linux/Debug/perf/5. perf report.md
+++ b/Linux/Debug/perf/5. perf report.md
@@ -7,12 +7,12 @@
 - [2. 使用方法](#2-使用方法)
 - [3. 参数介绍](#3-参数介绍)
   - [3.1. 常用参数](#31-常用参数)
-    - [内核符号](#内核符号)
-  - [输出](#输出)
-    - [默认输出](#默认输出)
-    - [指定分组规则](#指定分组规则)
-    - [Children/Self](#childrenself)
-- [例子](#例子)
+    - [3.1.1. 内核符号](#311-内核符号)
+  - [3.2. 输出](#32-输出)
+    - [3.2.1. 默认输出](#321-默认输出)
+    - [3.2.2. 指定分组规则](#322-指定分组规则)
+    - [3.2.3. Children/Self](#323-childrenself)
+- [4. 例子](#4-例子)
 
 <!-- /code_chunk_output -->
 
@@ -105,7 +105,7 @@ perf report [-i <file> | --input=file]
     </tr>
 </table>
 
-### 内核符号
+### 3.1.1. 内核符号
 
 perf不知道如何从压缩内核（vmlinuz）中抽取符号，如果你的内核保留了调试符号，则可以用-k来指出未压缩内核的位置：
 
@@ -113,9 +113,9 @@ perf不知道如何从压缩内核（vmlinuz）中抽取符号，如果你的内
 perf report -k /tmp/vmlinux
 ```
 
-## 输出
+## 3.2. 输出
 
-### 默认输出
+### 3.2.1. 默认输出
 
 默认情况下，样本根据函数（符号）分类，数量最多的样本位于最前面：
 
@@ -142,7 +142,7 @@ perf report -k /tmp/vmlinux
 * 第4列是特权级别，点号表示用户级别，k、g、u、H分别表示内核级别、客户机内核级别、客户机用户级别、hypervisor
 * 最后一列是符号名称，如果缺乏调试信息，则显示为0x开头的函数内存地址
 
-### 指定分组规则
+### 3.2.2. 指定分组规则
 
 你可以指定多种分组规则，对样本数进行统计。
 
@@ -174,7 +174,7 @@ perf report --sort=cpu
 +   8.28%  7  
 ```
 
-### Children/Self
+### 3.2.3. Children/Self
 
 如果在record时收集了调用链，则Overhead可以在Children、Self两个列中显示。Children显示子代函数的样本计数、Self显示函数自己的样本计数
 
@@ -182,7 +182,7 @@ perf report --sort=cpu
 ./perf report --no-children
 ```
 
-# 例子
+# 4. 例子
 
 报告perf.data
 
