--- Auto-Git Commit ---

--- a/Linux/Debug/perf/5. perf report.md
+++ b/Linux/Debug/perf/5. perf report.md
@@ -179,7 +179,7 @@ perf report --sort=cpu
 如果在record时收集了调用链，则Overhead可以在Children、Self两个列中显示。Children显示子代函数的样本计数、Self显示函数自己的样本计数
 
 ```
-./perf report --no-children
+perf report --no-children
 ```
 
 # 4. 例子
