--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -1397,7 +1397,7 @@ perf_event_attr:
 如果打算record中间经历的所有事件, 使用`-c 1`, 表明**每发生一次**`context-switches`便**收集一次**stack trace信息:
 
 ```
-./perf record -vv -e context-switches -c 1 /bin/true
+# ./perf record -vv -e context-switches -c 1 /bin/true
 Using CPUID GenuineIntel-6-55-7
 intel_pt default config: tsc,mtc,mtc_period=3,psb_period=3,pt,branch
 nr_cblocks: 0
