--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -102,16 +102,14 @@
 
 <!-- /code_chunk_output -->
 
-参照: http://www.brendangregg.com/perf.html
-
 # 1. 系统级性能优化
 
-系统级性能优化是指为了提高应用程序对操作系统资源与硬件资源的使用 效率，或者为了提高操作系统对硬件资源的使用效率而进行的代码优化。通过提 高对操作系统资源与硬件资源的利用率，使得应用程序与基础软硬件平台具有更 好的交互性，往往可以显著提升应用程序的执行速度和稳定性。
+系统级性能优化是指为了提高应用程序对操作系统资源与硬件资源的使用 效率，或者为了提高操作系统对硬件资源的使用效率而进行的代码优化。通过提高对操作系统资源与硬件资源的利用率，使得应用程序与基础软硬件平台具有更 好的交互性，往往可以显著提升应用程序的执行速度和稳定性。
 
-**系统级性能优化**包含**2个阶段**：
+**系统级性能优化**包含**2个阶段**:
 
-1. **性能剖析**（**performance profiling**）：**寻找性能瓶颈**，查找引发性能问题的原因及热点代码。
-2. **代码优化**：针对具体的性能问题而**优化代码与编译选项**，以改善软件性能。
+1. **性能剖析**（**performance profiling**）: **寻找性能瓶颈**，查找引发性能问题的原因及热点代码。
+2. **代码优化**: 针对具体的性能问题而**优化代码与编译选项**，以改善软件性能。
 
 在代码优化阶段往往需要凭借开发者的经验，编写简洁高效的代码，甚至在汇编语言级别合理使用各种指令，合理安排各种指令的执行顺序。
 
@@ -131,7 +129,7 @@
 * 什么代码在**分配内存**，分配了**多少**
 * 什么触发了**TCP重传**
 * 某个内核函数是否**被频繁调用**
-* 线程**离开CPU的原因** 
+* 线程**离开CPU的原因**
 
 ## 2.1. 基本原理
 
@@ -171,6 +169,7 @@ perf命令行接口并不能利用所有的Linux trace特性，有些trace需要
 ```
 # perf record -e block:block_rq_issue -ag
 ^C
+
 # ls -l perf.data
 -rw------- 1 root root 3458162 Jan 26 03:03 perf.data
 # perf report
@@ -357,7 +356,7 @@ perf record -F 99 -ag -- sleep 10
 perf record -F 99 -g -- sleep 10
 
 # If the previous command didn't work, try forcing perf to use the cpu-clock event:
-#  
+# 
 perf record -F 99 -e cpu-clock -ag -- sleep 10
 
 # Sample CPU stack traces for a container identified by its /sys/fs/cgroup/perf_event cgroup:
